--- a/ok/ya/ya02-0.30.0.0.0.md
+++ b/ok/ya/ya02-0.30.0.0.0.md
@@ -2,7 +2,7 @@
 
 范天駷之内①，素有脾胃之证，时显烦躁，胸中不利，大便不通。初冬出外而晚归，为寒气怫郁，闷乱大作，火不得伸故也。医疑有热，治以疏风丸，大便行而病不减。又疑药力小，复加七、八十丸，下两行，前证仍不减，复添吐逆。食不能停，痰唾稠粘，涌出不止，眼黑头旋，恶心烦闷，气短促上喘，无力，不欲言。心神颠倒，兀兀②不止，目不敢开，如在风云中，头苦痛如裂，身重如山，四肢厥冷，不得安卧。余谓前证乃胃气已损，复下两次，则重虚其胃，而痰厥头痛作矣。制[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)[白术](https://www.gmzyjc.com/read/bc/bc17-0.1.5.0.0.md)[天麻](https://www.gmzyjc.com/read/bc/bc10-0.0.6.0.0.md)汤主之而愈。
 
-[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)[白术](https://www.gmzyjc.com/read/bc/bc17-0.1.5.0.0.md)[天麻](https://www.gmzyjc.com/read/bc/bc10-0.0.6.0.0.md)汤：[黄柏](https://www.gmzyjc.com/read/bc/bc03-0.2.3.0.0.md)二分  [干姜](https://www.gmzyjc.com/read/bc/bc07-0.4.0.0.0.md)二分  [天麻](https://www.gmzyjc.com/read/bc/bc10-0.0.6.0.0.md) [苍术](https://www.gmzyjc.com/read/bc/bc04-0.0.2.0.0.md) 白[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md) [黄芪](https://www.gmzyjc.com/read/bc/bc17-0.1.4.0.0.md) [泽泻](https://www.gmzyjc.com/read/bc/bc05-0.0.4.0.0.md) [人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)以上各五分  [白术](https://www.gmzyjc.com/read/bc/bc17-0.1.5.0.0.md) 炒曲以上各一钱半  [半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)（汤洗七次） 大麦蘖（芽）面 橘皮以上各一钱五分
+[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)[白术](https://www.gmzyjc.com/read/bc/bc17-0.1.5.0.0.md)[天麻](https://www.gmzyjc.com/read/bc/bc10-0.0.6.0.0.md)汤：[黄柏](https://www.gmzyjc.com/read/bc/bc03-0.2.3.0.0.md)二分  [干姜](https://www.gmzyjc.com/read/bc/bc07-0.4.0.0.0.md)二分  [天麻](https://www.gmzyjc.com/read/bc/bc10-0.0.6.0.0.md) [苍术](https://www.gmzyjc.com/read/bc/bc04-0.0.2.0.0.md) 白[茯苓](https://www.gmzyjc.com/read/bc/bc05-0.0.1.0.0.md) [黄芪](https://www.gmzyjc.com/read/bc/bc17-0.1.4.0.0.md) [泽泻](https://www.gmzyjc.com/read/bc/bc05-0.0.4.0.0.md) [人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)以上各五分  [白术](https://www.gmzyjc.com/read/bc/bc17-0.1.5.0.0.md) 炒曲以上各一钱  [半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)（汤洗七次） 大麦蘖（芽）面 橘皮以上各一钱五分
 
 上件㕮咀，每服半两，水二盏，煎至一盏，去渣带热服，食前。此头痛苦甚，谓之足太阴痰厥头痛，非[半夏](https://www.gmzyjc.com/read/bc/bc16-0.1.1.0.0.md)不能疗；眼黑头眩，风虚内作，非[天麻](https://www.gmzyjc.com/read/bc/bc10-0.0.6.0.0.md)不能除，其苗为定风草，独不为风所动也；[黄芪](https://www.gmzyjc.com/read/bc/bc17-0.1.4.0.0.md)甘温，泻火补元气；[人参](https://www.gmzyjc.com/read/bc/bc17-0.1.1.0.0.md)甘温，泻火补中益气；二术俱甘苦温，甘除湿，补中益气；泽、苓利小便导湿，橘皮苦温益气，调中升阳；曲消食，荡胃中滞气；大麦蘖面宽中助胃气；[干姜](https://www.gmzyjc.com/read/bc/bc07-0.4.0.0.0.md)辛热以涤中寒；[黄柏](https://www.gmzyjc.com/read/bc/bc03-0.2.3.0.0.md)苦大寒，酒洗以主冬天少火在泉③发躁也。
 
