--- a/ok/wk/wk05-0.2.0.0.0.md
+++ b/ok/wk/wk05-0.2.0.0.0.md
@@ -18,7 +18,7 @@
 
 3.半阴半阳证：凡疮形肿而不高，痛而不甚，微红微热，脉虽洪数而无力者，可敷药性和平，功能行气疏风，活血定痛，散瘀消肿的冲和膏；或以活血散风，通络消肿的汤剂淋洗，如深静脉炎洗剂等。
 
-各种剂型的选择方法：①箍围药，使用方便，适应性强，应用范围广，只要所患部位能够固定所用药物即可选用。②膏药，运用方便，药力持久，便于收藏携帯，一般可以通用，但有的患者有过敏反应，生“膏药风”，则应改换它法。③薰洗剂，制备简单，运用方便，病变范围广大者更为适用。④掺药，使用灵活而方便，对于病情较重，单用一方一法力量不足者，加用本法可以加强疗效。此法习惯又称粉身法。事实上箍围消散法在使用时往往是多法并用，数方合施的，如薰洗法后用掺药法、薄贴法等，以期快速消散或缩小肿快。
+各种剂型的选择方法：①箍围药，使用方便，适应性强，应用范围广，只要所患部位能够固定所用药物即可选用。②膏药，运用方便，药力持久，便于收藏携帯，一般可以通用，但有的患者有过敏反应，生“膏药风”，则应改换它法。③薰洗剂，制备简单，运用方便，病变范围广大者更为适用。④掺药，使用灵活而方便，对于病情较重，单用一方一法力量不足者，加用本法可以加强疗效。此法习惯又称粉身法。事实上箍围消散法在使用时往往是多法并用，数方合施的，如薰洗法后用掺药法、薄贴法等，以期快速消散或缩小肿块。
 
 箍围药的调制法：先将按处方配制的药品制成药末，然后根据病情的变化及不同的证候分别调制。大抵以醋调的，取其化瘀解毒；以酒调的，取其助行药力；以葱、姜、蒜捣汁调的，取其辛香散邪；以菊花汁、银花露调的，取其清凉解毒；以鸡子清、蜂蜜调的，取其缓和刺激；以油类调的，取其润泽肌肤；以凡士林调的取其滑润护肤。
 
