--- a/ok/wbtb/wbtb0000.md
+++ b/ok/wbtb/wbtb0000.md
@@ -10,20 +10,18 @@
 
 **编者的话**
 
-《温病条辨讲解》一书，我们是根据光明中医函授大学对教材的要求，即在“注重打好中医基本功,注意提高中医基本理论水平和培养临床诊治技能，着力培养辨证论治的思维方法，竭诚发挥中医在防病治病中的特长，并在这个基础上扩大知识面”的思想指导下，结合当前中医对于急性热病的认识、论争情况，考虑到当前有关教材中存在的不足之处，以及教材改革的精神进行编写的。
+《温病条辨讲解》一书，我们是根据光明中医函授大学对教材的要求，即在“注重打好中医基本功，注意提高中医基本理论水平和培养临床诊治技能，着力培养辨证论治的思维方法，竭诚发挥中医在防病治病中的特长，并在这个基础上扩大知识面”的思想指导下，结合当前中医对于急性热病的认识、论争情况，考虑到当前有关教材中存在的不足之处，以及教材改革的精神进行编写的。
 
 《温病条辨讲解》是光明中医函授大学主编的高等中医函授教材中的基础课，也是《中医药学概论》的提高课。
 
-全书分为总论和各论两大部分。总论部分共分为四章。第一 章是“中医学对于传染病的一般认识”。为什么本书在总论中首先要介绍中医学对于传染病的一般认识？这是因为，中医学中所论述的急性热病，包括伤寒和温病，绝大多数都属于传染病的范围。“传染”这个词也是中医书中固有的提法。因此，在学习 《温病条辨》原著之前，先就中医对传染病的一般认识作一个总体介绍，知其源流，并为今后正确分析温病各家学说打下基础， 我们认为还是非常必要的。第二章是“评伤寒与温病学派之争"，"评伤寒与温病学派之争”已经存在多年并延续到今天，这是客观事实，如不在温病学教材中提出，读者在学习《伤寒论》和 《温病条辨》之后，必然会产生多岐之惑，对中医学在急性热病中的诊断治疗经验难以全面理解和运用。因此，我们认为还是把这一问题提出来好，让读者边学习，边思考，有助于培养学生分折问题和解决问题的能力。第三章是"《温病条辨》的基本内容”。在本章中重点介绍了三焦、卫气营血辨证论治体系，并就书中有关原文进行了系统、简要的整理和归类。这样做，可以使读者在学习原文之前，对全书先有一个总体的了解。我们认为， 这对于学好原著会有很大帮助。第四章 “学习《温病条辨讲解》的方法”，以《温病条辨讲解》作为温病学教材，在教与学的过程中，自然会感到与中医学院《温病学讲义》不同，因此，向学员介绍学习方法，是必要的。特别是对自学者，尤其重要。
+全书分为总论和各论两大部分。总论部分共分为四章。第一章是“中医学对于传染病的一般认识”。为什么本书在总论中首先要介绍中医学对于传染病的一般认识？这是因为，中医学中所论述的急性热病，包括伤寒和温病，绝大多数都属于传染病的范围。“传染”这个词也是中医书中固有的提法。因此，在学习《温病条辨》原著之前，先就中医对传染病的一般认识作一个总体介绍，知其源流，并为今后正确分析温病各家学说打下基础，我们认为还是非常必要的。第二章是“评伤寒与温病学派之争”，“评伤寒与温病学派之争”已经存在多年并延续到今天，这是客观事实，如不在温病学教材中提出，读者在学习《伤寒论》和《温病条辨》之后，必然会产生多岐之惑，对中医学在急性热病中的诊断治疗经验难以全面理解和运用。因此，我们认为还是把这一问题提出来好，让读者边学习，边思考，有助于培养学生分折问题和解决问题的能力。第三章是“《温病条辨》的基本内容”。在本章中重点介绍了三焦、卫气营血辨证论治体系，并就书中有关原文进行了系统、简要的整理和归类。这样做，可以使读者在学习原文之前，对全书先有一个总体的了解。我们认为，这对于学好原著会有很大帮助。第四章“学习《温病条辨讲解》的方法”，以《温病条辨讲解》作为温病学教材，在教与学的过程中，自然会感到与中医学院《温病学讲义》不同，因此，向学员介绍学习方法，是必要的。特别是对自学者，尤其重要。
 
-各论部分，主要是对《温病条辨》一书进行讲解。《温病条辨》原书，我们选用的是人民卫生出版社一九六三年版本。这个版本是根据问心堂本排印的，并据别本增补了朱武曹氏评及《秋燥胜气论》。不过我们作了部分删节。第一，在原文方面，我们选了卷首中的自序、凡例、原病篇，卷一上焦篇，卷二中焦篇， 卷三下焦篇，删去了卷四杂论，卷五解产难，卷六解儿难。因为我们认为，吴氏温病辨证论治体系的全面系统论述是在原病篇、 卷一、卷二、卷三。我们选取了这个主体部分，进行了讲解。第二，在注评方面.我们删去了汪瑟庵、征以园和朱武曹的评按，因为我们只对原文进行讲解。
+各论部分，主要是对《温病条辨》一书进行讲解。《温病条辨》原书，我们选用的是人民卫生出版社一九六三年版本。这个版本是根据问心堂本排印的，并据别本增补了朱武曹氏评及《秋燥胜气论》。不过我们作了部分删节。第一，在原文方面，我们选了卷首中的自序、凡例、原病篇，卷一上焦篇，卷二中焦篇，卷三下焦篇，删去了卷四杂论，卷五解产难，卷六解儿难。因为我们认为，吴氏温病辨证论治体系的全面系统论述是在原病篇、卷一、卷二、卷三。我们选取了这个主体部分，进行了讲解。第二，在注评方面，我们删去了汪瑟庵、征以园和朱武曹的评按，因为我们只对原文进行讲解。
 
-在对原文的讲解方面，由宁《温病条辨》是清代著作，接近现代语言，并不难懂，所以除对一些难字难词难句逐字逐句详解以外，着重逐条讲解条文和自注文中的辨证论治要点及其临证意义。为了帮助读者理解和临证运用，我们还选录了吴鞠通本人、当代著名老中医以及富有临床经验的中医工作者运用《温病条辨》理法方药的若干医案，其中也包括我们自己的临床经验，以此作为例证，帮助读者加深理解，学以致用。
+在对原文的讲解方面，由于《温病条辨》是清代著作，接近现代语言，并不难懂，所以除对一些难字难词难句逐字逐句详解以外，着重逐条讲解条文和自注文中的辨证论治要点及其临证意义。为了帮助读者理解和临证运用，我们还选录了吴鞠通本人、当代著名老中医以及富有临床经验的中医工作者运用《温病条辨》理法方药的若干医案，其中也包括我们自己的临床经验，以此作为例证，帮助读者加深理解，学以致用。
 
 本书初稿虽然是完成了，但是由于这种写法仍属探讨，编写时间紧促，加以我们的水平有限，所以距离要求还有较大差距。我们真诚地希望广大读者提出宝贵意见，以便今后改正和提高。
 
+编者
 
-
-​                                                                                                         编者
-
-​																										 一九八七年四月于北京西苑
+一九八七年四月于北京西苑
