update ok/qs/qs02.md. 口干咽庠  -->痒

--- a/ok/qs/qs02.md
+++ b/ok/qs/qs02.md
@@ -92,7 +92,7 @@
 
 **贝母微寒，止嗽化痰，肺痈肺痿，开郁除烦。**
 
-贝母味甘苦，性微寒，功能清热化痰、润肺止咳。适用于咳嗽痰黄、口干咽庠的痰热咳嗽和阴虚内热咳痰带血的肺痨咳嗽。以及咳嗽胸痛、咳吐脓血的肺痈病和肺热伤津、咳吐浊痰的肺痿病。本品还有开郁除烦热的作用，可治疗因痰热郁结所产生的痈肿、瘰疬等外科疾病。
+贝母味甘苦，性微寒，功能清热化痰、润肺止咳。适用于咳嗽痰黄、口干咽痒的痰热咳嗽和阴虚内热咳痰带血的肺痨咳嗽。以及咳嗽胸痛、咳吐脓血的肺痈病和肺热伤津、咳吐浊痰的肺痿病。本品还有开郁除烦热的作用，可治疗因痰热郁结所产生的痈肿、瘰疬等外科疾病。
 
 **大黄苦寒，实热积聚，蠲痰逐水，疏通便闭。**
 
