update ok/fjx/fjx04-0.10.0.0.0.md. 时复热庠 --> 痒

--- a/ok/fjx/fjx04-0.10.0.0.0.md
+++ b/ok/fjx/fjx04-0.10.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔服法〕原方㕮咀，清水三大碗煮至一杯，食远热服，更以美膳压之。（水煎饭前服）。
 
-〔讲解〕本方主治肝火上升或肝经湿热互结而致目赤耳痛，或湿热下注所致淋浊尿血诸证。若肝胆实火炽盛，循经发病，在上则见颠顶疼痛，口苦目赤，耳聋耳肿；在中则见胁肋胀满疼痛；湿热循经下注则见小便淋浊、阴痒阴肿，阴部时复热庠臊臭，妇女带下。
+〔讲解〕本方主治肝火上升或肝经湿热互结而致目赤耳痛，或湿热下注所致淋浊尿血诸证。若肝胆实火炽盛，循经发病，在上则见颠顶疼痛，口苦目赤，耳聋耳肿；在中则见胁肋胀满疼痛；湿热循经下注则见小便淋浊、阴痒阴肿，阴部时复热痒臊臭，妇女带下。
 
 方用龙胆草大苦大寒专泻肝胆之火，善清下焦湿热为君，臣以黄芩清肝肺火，栀子泻三焦火，助龙胆草泻实火利湿热。用木通、车前子、泽泻利水渗湿，使肝胆湿热从小便而出。肝火必伤阴血，故佐生地、当归滋阴养血以柔肝，使祛邪而不伤正。火邪内郁则肝郁不舒，使以柴胡、甘草，用柴胡疏肝解郁以散火，并引诸药入肝，甘草调和诸药，既防苦寒伤胃，又能缓急止痛以制肝逆。诸药合用，泻中有补，疏中有养，降中有升，祛邪而不伤正，泻火而不伐胃，具有泻肝胆实火，清之焦湿热之效。
 
