update ok/wk/wk12-0.19.0.0.0.md. 庠 --> 痒

--- a/ok/wk/wk12-0.19.0.0.0.md
+++ b/ok/wk/wk12-0.19.0.0.0.md
@@ -1,6 +1,6 @@
 ## 第十九节 牛皮癣
 
-本病因其皮坚厚如牛颈之皮故名“牛皮癣”。病变是以局部瘙庠、皮肤增厚、皮纹加深。有多角形丘疹为特征，好发于颈部故又名“摄领疮”。《诸病源候论》中专有“摄领疮候”一节。本病多见于青年。
+本病因其皮坚厚如牛颈之皮故名“牛皮癣”。病变是以局部瘙痒、皮肤增厚、皮纹加深。有多角形丘疹为特征，好发于颈部故又名“摄领疮”。《诸病源候论》中专有“摄领疮候”一节。本病多见于青年。
 
 〔病因病机〕
 
