update ok/gl/gl05-0.3.2.7.0.md. 骚庠 -- > 痒

--- a/ok/gl/gl05-0.3.2.7.0.md
+++ b/ok/gl/gl05-0.3.2.7.0.md
@@ -18,7 +18,7 @@
 
 正常情况下，妇女阴道内应有少量乳白色、无臭的分泌物，有濡润阴道壁的作用。若分泌过多或缠绵不绝，即为带下。其中色白、量多淋漓者，为白带；白带中混有血液，赤白分明的，为赤白带；带下淡红粘稠，似血非血，称为赤带；其色淡黄，粘稠臭秽，是为黄带。临床以白带、黄带较为多见。
 
-问带下，应注意了解量的多少，色质和气味等。若带下量多色白，清稀如涕，多属脾虚湿注；带下色黄，粘稠臭秽，或伴有外阴瘙庠疼痛，多属湿热下注；带下色赤，淋漓不断，微有臭味，多属肝经郁热；带下晦暗，质稀薄而多，腰腹酸冷，多属肾虚。总之，凡带下色白而清稀的，多属虚证寒证；色黄或赤，稠粘臭秽的，多为实证热证。
+问带下，应注意了解量的多少，色质和气味等。若带下量多色白，清稀如涕，多属脾虚湿注；带下色黄，粘稠臭秽，或伴有外阴瘙痒疼痛，多属湿热下注；带下色赤，淋漓不断，微有臭味，多属肝经郁热；带下晦暗，质稀薄而多，腰腹酸冷，多属肾虚。总之，凡带下色白而清稀的，多属虚证寒证；色黄或赤，稠粘臭秽的，多为实证热证。
 
 3、胎产
 
