update ok/bc/bc18-0.0.10.0.0.md. 明巩-->明矾

--- a/ok/bc/bc18-0.0.10.0.0.md
+++ b/ok/bc/bc18-0.0.10.0.0.md
@@ -1,6 +1,6 @@
 ### 石榴皮
 
-**〔原文〕酸涩而温，能涩肠，止泻痢下血**，<small>煅末服。</small>**崩带脱肛。**<small>泻痢至于脱肛者，以石榴皮，陈壁土加明巩少许，浓煎熏洗，再用五倍子炒研敷托而止之。</small>**浸水汁黑如墨，乌鬚方绿云油中用之。勿犯铁器**。<small>客座新闻云：一人患腹胀，夏成诊之曰：饮食如常，非水肿蛊胀，乃湿热生虫之象也。以石榴、椿树东引根皮、槟榔各五钱，空心服，腹大痛，泻虫长尺余，遂愈。</small>
+**〔原文〕酸涩而温，能涩肠，止泻痢下血**，<small>煅末服。</small>**崩带脱肛。**<small>泻痢至于脱肛者，以石榴皮，陈壁土加明矾少许，浓煎熏洗，再用五倍子炒研敷托而止之。</small>**浸水汁黑如墨，乌鬚方绿云油中用之。勿犯铁器**。<small>客座新闻云：一人患腹胀，夏成诊之曰：饮食如常，非水肿蛊胀，乃湿热生虫之象也。以石榴、椿树东引根皮、槟榔各五钱，空心服，腹大痛，泻虫长尺余，遂愈。</small>
 
 【讲解】**石榴皮善能涩肠止泻**。为石榴科落叶灌木或小乔木石榴的果皮。切块晒干，生用。
 
