update ok/wk/wk12-0.14.0.0.0.md. 明巩-->明矾

--- a/ok/wk/wk12-0.14.0.0.0.md
+++ b/ok/wk/wk12-0.14.0.0.0.md
@@ -60,7 +60,7 @@
 
 上药文火焙焦研为细末，贮瓶备用。加香油适量调匀涂于患处日3、4次。（选自《新医学》1975年6月）
 
-3.雄黄10克 明巩10克 琥珀末3克
+3.雄黄10克 明矾10克 琥珀末3克
 
 共研细末，用凉井水调如稀糊浆，以新羊毛刷蘸之擦患处，随干随擦。节选自《千家妙方》
 
