update ok/bc/bc05-0.0.20.0.0.md. “人心、小肠二经。”改为“入心、小肠二经。”

--- a/ok/bc/bc05-0.0.20.0.0.md
+++ b/ok/bc/bc05-0.0.20.0.0.md
@@ -6,7 +6,7 @@
 
 另有藤本植物相思子的种子，和赤小豆有“红豆”之称，种脐及附近呈黑色，下半部为朱红或赤褐色，有毒，不可内服。必须区分，切不可混。
 
-本品味甘酸，性平。人心、小肠二经。性善下行，功能通利水道，使水湿下泄而消肿。治水肿胀满，脚气浮肿，虚实均宜，而偏于湿者尤为合适。又能清血分热毒，排脓消痈，故用治热毒疮疡，亦有一定疗效。正如《备要》所载之行水散血、消肿排脓、清热解毒等，以概其功。
+本品味甘酸，性平。入心、小肠二经。性善下行，功能通利水道，使水湿下泄而消肿。治水肿胀满，脚气浮肿，虚实均宜，而偏于湿者尤为合适。又能清血分热毒，排脓消痈，故用治热毒疮疡，亦有一定疗效。正如《备要》所载之行水散血、消肿排脓、清热解毒等，以概其功。
 
 【临证应用】赤小豆性善利水消肿，治水肿可单用煎服，或配白茅根、桑白皮、茯苓皮等利水药，以加强消肿之功，据《食疗本草》记载，用赤小豆和鲤鱼煮食，治脚气及下腹水肿。近代医学用此法治疗肾炎水肿，肝硬化腹水及营养不良性浮肿，取得较好的疗效。本品清热解毒之功，亦颇突出，用于热毒疮痈，痄腮乳痈，丹毒等，内服外用均有效。如痈肿未脓，赤小豆为末，用鸡蛋清、蜂蜜或醋等调敷患处，干则换药，也可配伍清热解毒药内服。治痄腮、丹毒等病，可用本品捣烂外敷。此外，借其清热利湿之功，也可用于湿热黄疸。近有报道治糖尿病，以本品（发芽）120克同猪胰脏一个煮食，经常服用，有一定的疗效。
 
