update ok/bc/bc05-0.0.22.0.0.md. “微苦而凉，利小便”改为“微苦而凉。利小便” “小便不利之进”改为“小便不利之证”

--- a/ok/bc/bc05-0.0.22.0.0.md
+++ b/ok/bc/bc05-0.0.22.0.0.md
@@ -1,11 +1,11 @@
 ### 淡竹叶
 
-〔原文〕**微苦而凉，利小便，泻火，凉肺清心。**
+〔原文〕**微苦而凉。利小便，泻火，凉肺清心。**
 
 【讲解】**淡竹叶以利尿通淋为主，并能清热除烦。**为禾本科多年生草本植物淡竹叶的全草。高40—100厘米。茎丛生，叶互生、披针形；圆椎花序顶生。5—6月未开花时采收，晒干，切段，生用。
 
 本品味甘淡，性寒。入心、肺、小肠经。功能利尿通淋，以导小肠、膀胱湿热，兼清心除烦，清上导下为利尿清热除烦之品，适用于小便短赤涩痛，烦热口海，口舌生疮及小儿惊热夜啼等证。
 
-【临证应用】淡竹叶用于心火上炎、口舌生疮，及移热小肠，小便短赤，淋沥涩痛等证，常与生地、木通等同用，如导赤散，清心利水以引导心火下行。治小儿惊热夜啼，常与钩藤、蝉蜕、灯心草等同用。若与生地、连翘、麦冬等同用，也可用于烦热口渴，小便不利之进。此外，风热感冒、痰热咳嗽、小便短赤者也可配用。
+【临证应用】淡竹叶用于心火上炎、口舌生疮，及移热小肠，小便短赤，淋沥涩痛等证，常与生地、木通等同用，如导赤散，清心利水以引导心火下行。治小儿惊热夜啼，常与钩藤、蝉蜕、灯心草等同用。若与生地、连翘、麦冬等同用，也可用于烦热口渴，小便不利之证。此外，风热感冒、痰热咳嗽、小便短赤者也可配用。
 
 【用量用法】6—15克，煎服。不食久煎。
