--- a/ok/bc/bc15.md
+++ b/ok/bc/bc15.md
@@ -14,11 +14,11 @@
 
 ​        凡能驱除或杀灭寄生虫的药物，称为驱虫药。
 
-​        寄生虫在人体内寄居部位，有肠道、肝脏、肺脏，甚至脑部等不同，而本类药物主要用以驱杀肠道寄生虫，常见的有蛔虫、蛲虫、绦虫、钩虫和姜片虫等，其中除钩虫由皮肤接触感染外，多由口腔进人人体。
+​        寄生虫在人体内寄居部位，有肠道、肝脏、肺脏，甚至脑部等不同，而本类药物主要用以驱杀肠道寄生虫，常见的有蛔虫、蛲虫、绦虫、钩虫和姜片虫等，其中除钩虫由皮肤接触感染外，多由口腔进入人体。
 
-​        患肠道寄生虫的病人，大多具有绕挤腹痛，时作时止，不思饮食，或善饥多食，嗜食异物，肛门、鼻及耳瘙痒等症状，久则可有面色萎黄，形瘦腹大，或浮肿乏力等证。但各种虫证还有各自的特征。另有不少患者因寄生虫感染较轻，无明显症状，只是在检查大便时才被发现。
+​        患肠道寄生虫的病人，大多具有绕脐腹痛，时作时止，不思饮食，或善饥多食，嗜食异物，肛门、鼻及耳瘙痒等症状，久则可有面色萎黄，形瘦腹大，或浮肿乏力等证。但各种虫证还有各自的特征。另有不少患者因寄生虫感染较轻，无明显症状，只是在检查大便时才被发现。
 
-​        使用本类药物，必须根据寄生虫的不同种类及患者体质的强弱、兼证的不同等，分别选用和适当的配伍。如有积滞者，可配伍消积导滞药，便秘者，当配泻下药，并有助于虫体排出，脾胃虚弱，运化失常者，可酌配健运脾胃药，对于体虚的患者，应攻补兼施，或先攻后补，或先补后攻。
+​        使用本类药物，必须根据寄生虫的不同种类及患者体质的强弱、兼证的不同等，分别选用和适当的配伍。如有积滞者，可配伍消积导滞药；便秘者，当配泻下药，并有助于虫体排出；脾胃虚弱，运化失常者，可酌配健运脾胃药，对于体虚的患者，应攻补兼施，或先攻后补，或先补后攻。
 
 ​        驱虫药一般应在空腹时服，使药力直接作用于虫体，以收驱虫之效。
 
