--- a/ok/bc/bc15-0.0.8.0.0.md
+++ b/ok/bc/bc15-0.0.8.0.0.md
@@ -6,6 +6,6 @@
 
 ​      本品味辛性温，入脾、胃、肺、大肠经。功能杀虫解毒，消痈肿。其杀虫解毒、甚为强烈，应用范围亦较广泛。为治肠寄生虫、痢疾及肺痨咳嗽常用之品。治疮疡之证，外用效果较好。
 
-​      【临证应用】 大蒜用于钩虫、蛲虫病，可配槟榔、使君子等驱虫药，以增强疗效。对钩虫病还可作预防用，在下田前，将大蒜捣烂，涂于四肢。对蛲虫病又可作为外用，将大蒜捣烂，加入香油少许，临睡前涂于肛门周围即可。也可用于痢疾，腹泻、肺痨、顿咳等证，治痢疾、腹泻，可单味生食，也可煎服，或用10%的大蒜浸液作保留灌肠，治肺捞可经常服食生蒜，也可同米煮粥常服，或与百部、白芨等同用；治顿咳（百日咳）用紫皮蒜30 克捣烂，加两倍晕的凉开水，泡十二小时，滤汁，服时加白糖适量，每服一汤匙(2 岁以下小儿减半），每日3 次，连服10一15天。用于疮疖痈肿初起，捣烂与麻油调敷肿处，干之再易，可消一切肿毒；亦可切片，文火炎之，以增消肿作用。治斑秃、癣疮，切片外擦或捣烂外敷，均有效。此外，还可防治流感，治疗食蟹中毒等。
+​      【临证应用】 大蒜用于钩虫、蛲虫病，可配槟榔、使君子等驱虫药，以增强疗效。对钩虫病还可作预防用，在下田前，将大蒜捣烂，涂于四肢。对蛲虫病又可作为外用，将大蒜捣烂，加入香油少许，临睡前涂于肛门周围即可。也可用于痢疾，腹泻、肺痨、顿咳等证，治痢疾、腹泻，可单味生食，也可煎服，或用10%的大蒜浸液作保留灌肠；治肺捞可经常服食生蒜，也可同米煮粥常服，或与百部、白芨等同用；治顿咳（百日咳）用紫皮蒜30 克捣烂，加两倍晕的凉开水，泡十二小时，滤汁，服时加白糖适量，每服一汤匙(2 岁以下小儿减半），每日3 次，连服10一15天。用于疮疖痈肿初起，捣烂与麻油调敷肿处，干之再易，可消一切肿毒；亦可切片，文火灸之，以增消肿作用。治斑秃、癣疮，切片外擦或捣烂外敷，均有效。此外，还可防治流感，治疗食蟹中毒等。
 
-​       【用量用法】    3 一5 枚，生食、煎汤或制成糖浆服。外用适量，捣敷、切片擦或隔蒜炎。但外敷能引起皮肤发红、起泡，故不可敷之过久。
+​       【用量用法】    3一5 枚，生食、煎汤或制成糖浆服。外用适量，捣敷、切片擦或隔蒜灸。但外敷能引起皮肤发红、起泡，故不可敷之过久。
