--- a/ok/bc/bc15-0.0.9.0.0.md
+++ b/ok/bc/bc15-0.0.9.0.0.md
@@ -1,6 +1,6 @@
 ### 小结
 
-​       本类药物的主要作用是驱除、杀灭肠道寄生虫， 但临床应用，又各有所长。其中使君子、鹤虱以驱杀蛔虫、蛲虫为主，但使君子甘温无毒，驱蛔效力尤强，单用就有效，并兼能健脾消积；鹤虱的驱蛔效力,比 使君子弱，故需配成复方应用。槟榔、雷丸、榧子、贯众以驱杀绦虫为主。槟榔对姜片虫亦有良效，又有行气、消积、利水作用；雷丸兼驱钩虫，但加热则失效，故宜作丸散剂服，榧子药性和缓，为比较安全的驱虫药，对钩虫亦有效，并有缓泻作用；贯众并能清热解毒，可作流行性疾病预防药，又可止血，主治崩漏下血等证。芜荑以驱杀蛔虫、绦虫为主。大蒜可治钩虫、蛲虫病，解毒作用较强，为治泻痢、肺痨病之常用药，并能消痈肿。
+​       本类药物的主要作用是驱除、杀灭肠道寄生虫， 但临床应用，又各有所长。其中使君子、鹤虱以驱杀蛔虫、蛲虫为主，但使君子甘温无毒，驱蛔效力尤强，单用就有效，并兼能健脾消积；鹤虱的驱蛔效力比使君子弱，故需配成复方应用。槟榔、雷丸、榧子、贯众以驱杀绦虫为主。槟榔对姜片虫亦有良效，又有行气、消积、利水作用；雷丸兼驱钩虫，但加热则失效，故宜作丸散剂服；榧子药性和缓，为比较安全的驱虫药，对钩虫亦有效，并有缓泻作用；贯众并能清热解毒，可作流行性疾病预防药，又可止血，主治崩漏下血等证。芜荑以驱杀蛔虫、绦虫为主。大蒜可治钩虫、蛲虫病，解毒作用较强，为治泻痢、肺痨病之常用药，并能消痈肿。
 
 ​                                                                         **驱虫药功用归纳简表**
 
