--- a/ok/bc/bc15-0.0.9.0.0.md
+++ b/ok/bc/bc15-0.0.9.0.0.md
@@ -12,7 +12,7 @@
 |  鹤虱  | 辛、苦、平有小毒 |      脾、胃      |             杀虫             |                 蛔虫、绦虫等多种肠道寄生虫病                 |                      3—10克                       |                                                          |
 |  芜荑  |    辛、苦、温    |      脾、胃      |          杀虫、消积          |                虫积腹痛、小儿疳积、泄泻、疥癣                |                  3—10克外用适量                   |                                                          |
 |  榧子  |      甘、平      |     肺、大肠     |       杀虫、润肺、止咳       |                     绦虫、钩虫、肺燥咳嗽                     |                      30—50克                      |                 炒熟去壳服，或打碎入煎剂                 |
-|  贯众  |      苦、寒      |      脾、胃      | 杀虫、亲热、解毒、凉血、止血 |                  绦虫、钩虫、多种热病、崩漏                  |                      10—15克                      |                 生用驱虫解毒，炒炭用止血                 |
+|  贯众  |      苦、寒      |      肝、脾     | 杀虫、亲热、解毒、凉血、止血 |                  绦虫、钩虫、多种热病、崩漏                  |                      10—15克                      |                 生用驱虫解毒，炒炭用止血                 |
 |  大蒜  |      辛、温      | 脾、胃、肺、大肠 |       杀虫解毒、消痈肿       |         钩虫、蛲虫、痢疾、腹泻、肺痨、顿咳、痈疽肿毒         |                  3—10克外用适量                   |                                                          |
 
 ​            **复习思考题**
