update ok/qs/qs01_04.md. 常握  -->  掌握

--- a/ok/qs/qs01_04.md
+++ b/ok/qs/qs01_04.md
@@ -180,7 +180,7 @@
 
 滑脉主痰湿，如滑脉见于右关部多为痰湿、饮食积滞（右关候脾胃，脾主运化痰饮水湿，胃主纳食），见于左关部多主风痰（左关候肝胆，肝主风）。见于寸部多主呕吐呃逆（上焦病证，寸脉候心肺上焦），若滑脉见于尺部多为下焦阳热证，见便下脓血（尺脉候肾）。涩脉主血虚精伤，津液亏少，或风寒湿所致的痹阻不通。见于尺部主精血伤（肾主藏精），见于寸部主夺汗律液枯竭，见于关部主伤津亡液。弦脉见于关部多为痰饮水湿为患，弦为肝木亢盛之象，肝木旺而侵犯脾土，脾土受侵，运化无权，故水湿为患。寸候上焦，弦见于寸部，多属阴邪上乘阳位而见头痛，见于尺部则多为腹痛。紧脉多为表寒外束或里寒独盛，寒积于内，阴寒搏结而疼痛。洪脉为火热之邪太盛：内热炽盛，阴液耗伤。动脉有阴动阳动，阳动主发热、惊狂、疼痛，阴动主汗出、血崩。长脉为气血安和，短脉主气机病变，有气虚和气滞之不同。细主气血衰少，大脉则是邪气亢盛、疾病加重的脉象。
 
-从第十二节“浮阳主表”起到这一节，主要阐述了浮脉等二十七种脉象的主病。由于疾病的寒热虚实挟杂，阴阳表里交错，气血痰湿并见以及脏腑之间的生克乘侮等复杂关系，因此脉象也不可能很简单地表现出来，这就需要灵活常握，临床变通，不可拘泥。
+从第十二节“浮阳主表”起到这一节，主要阐述了浮脉等二十七种脉象的主病。由于疾病的寒热虚实挟杂，阴阳表里交错，气血痰湿并见以及脏腑之间的生克乘侮等复杂关系，因此脉象也不可能很简单地表现出来，这就需要灵活掌握，临床变通，不可拘泥。
 
 **17.脉之主病，有宜不宜，阴阳顺逆，凶吉可推。**
 
