update ok/bc/bc15-0.0.6.0.0.md. 胄 --> 胃

--- a/ok/bc/bc15-0.0.6.0.0.md
+++ b/ok/bc/bc15-0.0.6.0.0.md
@@ -4,7 +4,7 @@
 
 ​      【讲解】   **榧实可驱杀多种肠寄生虫，井有缓泻作用，是比较有效而又安全的驱虫药**。为红豆杉科常绿乔木植物榧树的成熟种子。《别录》原名榧实，一般称为榧子。生用，或炒用。
 
-​        榧子味甘性平，入肺、大肠经。具有杀虫消积之功，既能杀虫，又不损伤胄气，具有缓泻作用，可促使虫体排出，故为驱虫要药。可用于多种虫积腹痛之证，尤以杀钩虫、绦虫为佳。
+​        榧子味甘性平，入肺、大肠经。具有杀虫消积之功，既能杀虫，又不损伤胃气，具有缓泻作用，可促使虫体排出，故为驱虫要药。可用于多种虫积腹痛之证，尤以杀钩虫、绦虫为佳。
 
 ​         此外，尚能润肺止咳，适用于肺燥咳嗽证情较轻者。
 
