--- a/ok/bc/bc16-0.2.16.0.0.md
+++ b/ok/bc/bc16-0.2.16.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】**荸芥有清热化痰消积之功。**为莎草科多年生水生草本植物荸荠的球茎。凫芘之名，出于《尔雅》，乌芋之名，出于《广雅》，地栗之名，出于《通志》。以上之名，部分地区尚还匀用。主鲜用，捣汁服。
 
-荸荠味甘，性寒。入肺、胃经。能清肺胄之热，而有化痰消积之功。治温病消渴、黄疸、血淋、便血、痞积、目赤、咽喉肿 痛等证。《本草求真》曰：“其效若是之多，盖以味甘性寒，则在于胸实热可除，而诸实胀满可消；力善下行，而诸血痢血毒可祛”。
+荸荠味甘，性寒。入肺、胃经。能清肺胃之热，而有化痰消积之功。治温病消渴、黄疸、血淋、便血、痞积、目赤、咽喉肿 痛等证。《本草求真》曰：“其效若是之多，盖以味甘性寒，则在于胸实热可除，而诸实胀满可消；力善下行，而诸血痢血毒可祛”。
 
 【临征应用】荸荠用于温热病烦热口渴，常配梨汁、鲜苇根汁、麦冬汁、藕汁等，如五汁饮。治湿热黄疸，小便不利，可煎汤代茶常用。治痞积，也可单用，每日服之，有助消痞散积。
 
