update ok/bc/bc05-0.0.24.0.0.md. “水肿、小便不利，泄泻、带下等证”改为“水肿、小便不利、泄泻、带下等证” 两处的“小便短赤，淋 沥涩痛”改为“小便短赤，淋沥涩痛”，除“淋沥”之间的空格。 “小僮短赤、淋沥涩痛”改为“小便短赤、淋沥涩痛” “海金 沙”改为“海金沙” 主治列加了多处用于换行的“<br />” 删除多处字之间或符号与字的空格

--- a/ok/bc/bc05-0.0.24.0.0.md
+++ b/ok/bc/bc05-0.0.24.0.0.md
@@ -20,26 +20,26 @@
 
 | 药名    | 性味          | 归经              | 功效                                      | 主治                                                         | 用量              | 备注                                                         |
 | ------- | ------------- | ----------------- | ----------------------------------------- | ------------------------------------------------------------ | ----------------- | ------------------------------------------------------------ |
-| 茯苓    | 甘、淡、 平   | 心、脾、肾、 肺   | 利水渗湿， 健脾，安神                     | ①水肿、小便不 利<br />②痰饮<br />③脾胃虚弱，食少便溏 <br />④心悸、失眠 | 10—15 克          | 用于安神， 常与朱砂拌用。<br />茯苓皮功专利水消肿；<br />茯神专主宁心安神。 |
-| 猪苓    | 甘、淡、 微寒 | 肾、膀胱          | 利水渗湿                                  | 水肿、小便不利，泄泻、带下等证                               | 5—10 克           |                                                              |
-| 泽泻    | 甘、淡、 寒   | 肾、膀胱          | 利水渗湿， 泄热                           | 小便不利、水肿、泄泻、淋浊、带下、痰饮等证                   | 5—10 克           |                                                              |
-| 薏苡仁  | 甘、淡、 微寒 | 脾、胃、肺        | 利水渗湿， 健脾止泻， 除痹舒挛， 清热排脓 | ①水肿、小便不 利<br />②脾虚泄泻<br />③痹证<br />④肺痈        | 10—30克           | 健脾炒用， 余皆生用。                                        |
+| 茯苓    | 甘、淡、平   | 心、脾、肾、肺   | 利水渗湿， 健脾，安神                     | ①水肿、小便不 利<br />②痰饮<br />③脾胃虚弱，食少便溏 <br />④心悸、失眠 | 10—15 克          | 用于安神， 常与朱砂拌用。<br />茯苓皮功专利水消肿；<br />茯神专主宁心安神。 |
+| 猪苓    | 甘、淡、微寒 | 肾、膀胱          | 利水渗湿                                  | 水肿、小便不利、泄泻、带下等证                               | 5—10 克           |                                                              |
+| 泽泻    | 甘、淡、寒   | 肾、膀胱          | 利水渗湿， 泄热                           | 小便不利、水肿、泄泻、淋浊、带下、痰饮等证                   | 5—10 克           |                                                              |
+| 薏苡仁  | 甘、淡、微寒 | 脾、胃、肺        | 利水渗湿， 健脾止泻， 除痹舒挛， 清热排脓 | ①水肿、小便不 利<br />②脾虚泄泻<br />③痹证<br />④肺痈        | 10—30克           | 健脾炒用， 余皆生用。                                        |
 | 车前 子 | 甘、寒        | 肝、肺、肾        | 利水通淋， 止泻                           | ①小便不利、水肿、淋病 <br />②湿热泄泻<br />③目赤肿痛、翳障   | 5—10 克           | 布包入煎剂 车前草又能凉血解毒，主治热毒疮疡，及吐血衄血。    |
-| 滑石    | 甘、淡、 寒   | 胃、膀胱          | 清热利湿， 清解暑热                       | ①小便不利、淋沥涩痛<br />②暑热烦渴、湿热泄泻<br />③湿疹、湿疮 | 10—15 克外用 适量 |                                                              |
-| 木通    | 苦、寒        | 心、小肠、膀胱    | 利水通淋，泄热，通乳                      | ①小便短赤，淋 沥涩痛<br />②产后乳汁不多<br />③湿热痹证       | 3—6克             | 孕妇慎用                                                     |
-| 通草    | 甘、淡、 微寒 | 肺、胃            | 清热利水，通乳                            | ①小便短赤、淋 沥涩痛<br />②产后乳汁不多                      | 3—6克             |                                                              |
-| 萹蓄    | 苦、微 寒     | 膀胱              | 利水通淋， 杀虫止痒                       | ①小僮短赤、淋沥涩痛<br />②皮肤湿疹                           | 10—30克外用 适量  |                                                              |
-| 石苇    | 苦、甘、 微寒 | 肺、膀胱          | 利水通淋，止咳                            | ①淋证<br />②肺热喘咳                                         | 5—10 克           |                                                              |
-| 瞿麦    | 苦、寒        | 心、小肠、 膀胱   | 利水通淋                                  | 小便短赤、淋沥涩痛                                           | 10—15 克          |                                                              |
-| 海金 沙 | 甘、淡、 寒   | 膀胱、小肠        | 利水通淋                                  | 淋证                                                         | 6—12克            | 布包入煎                                                     |
-| 萆薢    | 苦、平        | 肝、胃、膀胱      | 利湿湿，祛风湿                            | ①膏淋，小便混浊 ②风湿痹痛                                    | 10—15 克          |                                                              |
-| 茵陈    | 苦、微 寒     | 脾、胃、肝、 胆   | 清利湿热，黄疸                            | 黄疸                                                         | 10—30 克          |                                                              |
-| 地肤子  | 苦、寒        | 膀胱              | 清热利水，止痒                            | ①小便不利、淋   沥涩痛<br />②皮肤湿疮瘙痒                    | 10—15 克外用 适量 |                                                              |
-| 冬葵 子 | 甘、寒        | 大肠、小肠、 膀胱 | 利水通淋，下乳，润肠                      | ①水肿、小便不 利 ②乳汁不行、便秘                             | 10—15 克          | 孕妇慎用                                                     |
-| 冬瓜 皮 | 甘、微 寒     | 肺、小肠          | 利水消肿                                  | 水肿                                                         | 15—30 克          | 冬瓜子能清热排脓，主治肺热咳嗽、肺痈、肠痈。                 |
-| 赤小 豆 | 甘、酸、 平   | 心、小肠          | 利水消肿， 解表排脓                       | ①水肿、脚气<br />②热毒疮痈                                   | 15—30 克外用适量  |                                                              |
-| 灯心 草 | 甘、淡、 微寒 | 心、小肠          | 利水通淋，清心除烦                        | ①小便不利、淋 沥涩痛<br />②小儿夜啼                          | 2—4克             | 用朱砂拌用，主心烦惊悸。                                     |
-| 淡竹 叶 | 甘、淡、 寒   | 心、肺、小肠      | 利水通淋， 清心除烦                       | ①小便短赤涩痛<br />②口舌生疮                                 | 6—15 克           |                                                              |
+| 滑石    | 甘、淡、寒   | 胃、膀胱          | 清热利湿， 清解暑热                       | ①小便不利、淋沥涩痛<br />②暑热烦渴、湿热泄泻<br />③湿疹、湿疮 | 10—15 克外用 适量 |                                                              |
+| 木通    | 苦、寒        | 心、小肠、膀胱    | 利水通淋，泄热，通乳                      | ①小便短赤，淋沥涩痛<br />②产后乳汁不多<br />③湿热痹证       | 3—6克             | 孕妇慎用                                                     |
+| 通草    | 甘、淡、微寒 | 肺、胃            | 清热利水，通乳                            | ①小便短赤、淋沥涩痛<br />②产后乳汁不多                      | 3—6克             |                                                              |
+| 萹蓄    | 苦、微 寒     | 膀胱              | 利水通淋， 杀虫止痒                       | ①小便短赤、淋沥涩痛<br />②皮肤湿疹                           | 10—30克外用适量  |                                                              |
+| 石苇    | 苦、甘、微寒 | 肺、膀胱          | 利水通淋，止咳                            | ①淋证<br />②肺热喘咳                                         | 5—10 克           |                                                              |
+| 瞿麦    | 苦、寒        | 心、小肠、膀胱   | 利水通淋                                  | 小便短赤、淋沥涩痛                                           | 10—15 克          |                                                              |
+| 海金沙 | 甘、淡、寒   | 膀胱、小肠        | 利水通淋                                  | 淋证                                                         | 6—12克            | 布包入煎                                                     |
+| 萆薢    | 苦、平        | 肝、胃、膀胱      | 利湿湿，祛风湿                            | ①膏淋，小便混浊<br />②风湿痹痛                                    | 10—15 克          |                                                              |
+| 茵陈    | 苦、微寒     | 脾、胃、肝、胆   | 清利湿热，黄疸                            | 黄疸                                                         | 10—30 克          |                                                              |
+| 地肤子  | 苦、寒        | 膀胱              | 清热利水，止痒                            | ①小便不利、淋沥涩痛<br />②皮肤湿疮瘙痒                    | 10—15 克外用适量 |                                                              |
+| 冬葵 子 | 甘、寒        | 大肠、小肠、膀胱 | 利水通淋，下乳，润肠                      | ①水肿、小便不利<br />②乳汁不行、便秘                             | 10—15 克          | 孕妇慎用                                                     |
+| 冬瓜 皮 | 甘、微寒     | 肺、小肠          | 利水消肿                                  | 水肿                                                         | 15—30 克          | 冬瓜子能清热排脓，主治肺热咳嗽、肺痈、肠痈。                 |
+| 赤小 豆 | 甘、酸、平   | 心、小肠          | 利水消肿， 解表排脓                       | ①水肿、脚气<br />②热毒疮痈                                   | 15—30 克外用适量  |                                                              |
+| 灯心 草 | 甘、淡、微寒 | 心、小肠          | 利水通淋，清心除烦                        | ①小便不利、淋沥涩痛<br />②小儿夜啼                          | 2—4克             | 用朱砂拌用，主心烦惊悸。                                     |
+| 淡竹 叶 | 甘、淡、寒   | 心、肺、小肠      | 利水通淋，清心除烦                       | ①小便短赤涩痛<br />②口舌生疮                                 | 6—15克           |                                                              |
 | 鲤鱼    | 甘、平        | 脾、肾            | 利水消肿                                  | 水肿胀满<br />脚气、黄疸                                     | 无定量            |                                                              |
 
 复习思考题 
