update ok/qs/qs03_14.md. 暧气 改为 嗳气

--- a/ok/qs/qs03_14.md
+++ b/ok/qs/qs03_14.md
@@ -190,7 +190,7 @@
 
 本方由人参，槟榔，沉香，乌药等四味药组成。功能降气开郁。主治上气喘急，胸脘满闷等症。
 
-本方去人参，加木香，枳壳，以白酒磨服，名五磨饮子，功能破滞宽中，主治胸闷不舒，时作暧气之证。
+本方去人参，加木香，枳壳，以白酒磨服，名五磨饮子，功能破滞宽中，主治胸闷不舒，时作嗳气之证。
 
 **18.定喘汤**
 
