--- a/ok/wk/wk13-0.5.0.0.0.md
+++ b/ok/wk/wk13-0.5.0.0.0.md
@@ -14,7 +14,7 @@
 
 （一）辨证要领
 
-—是辨虚实，二是辨部位。实证：患部肿块局限高突，红肿热痛，约5〜7天成脓，溃后脓液黄浊稠厚而带粪臭味。虚证：患部肿块平塌，红肿热痛不明显，成脓较慢，约10〜20天，溃后出脓灰白稀薄。不臭或微臭，疮口凹陷而呈潜形性。
+一是辨虚实，二是辨部位。实证：患部肿块局限高突，红肿热痛，约5〜7天成脓，溃后脓液黄浊稠厚而带粪臭味。虚证：患部肿块平塌，红肿热痛不明显，成脓较慢，约10〜20天，溃后出脓灰白稀薄。不臭或微臭，疮口凹陷而呈潜形性。
 
 肛痈的部位和深浅不同，症状也有差异，如肛提肌以上的间隙脓肿，位置深隐，全身症状重，而局部症状轻；肛提肌以下的间隙脓肿，部位浅而显，局部红肿热痛明显，而全身症状较轻。
 
