--- a/ok/wk/wk12-0.2.0.0.0.md
+++ b/ok/wk/wk12-0.2.0.0.0.md
@@ -10,7 +10,7 @@
 
 （一）辨证要领
 
-—是辨皮肤损害，凡糜烂、渗液、滋水淋漓者属湿；皮肤潮红，挟有红斑而痒者属热；搔痒，脱屑，皮损游走不定者属风，二是辨部位，上部者多风，下部者多湿，而在乳、耳部、阴囊等处则形成特殊的证情。三是本病应与接触性皮炎、牛皮癣鉴别：
+一是辨皮肤损害，凡糜烂、渗液、滋水淋漓者属湿；皮肤潮红，挟有红斑而痒者属热；搔痒，脱屑，皮损游走不定者属风，二是辨部位，上部者多风，下部者多湿，而在乳、耳部、阴囊等处则形成特殊的证情。三是本病应与接触性皮炎、牛皮癣鉴别：
 
 1.接触性皮炎：皮损常限于接触部位，皮损的形状与接触物相似，皮疹为水肿、水疱、边界清楚，有明显的接触史，去除病因则很快全愈。
 
