--- a/ok/bc/bc03-0.4.6.0.0.md
+++ b/ok/bc/bc03-0.4.6.0.0.md
@@ -11,6 +11,6 @@
 
 肝胆火郁的小儿惊风，发热痉挛，可配钩籐、牛黄等药而奏息风止痉之效，如凉惊丸。治热毒痈疮、痄腮肿痛，可单用或配银花、连翘、元参等服用，亦可调敷患处。
 
-据研究，应用青黛口服，对现代医学之慢性粒细胞性白血病有—定疗效。从青黛中提取有效成分靛玉红，用治上述疾病也可获效。
+据研究，应用青黛口服，对现代医学之慢性粒细胞性白血病有一定疗效。从青黛中提取有效成分靛玉红，用治上述疾病也可获效。
 
 【用量用法】 1 一 3克。因其难溶于水，故只作丸散，或入汤剂冲服，不入煎剂。外用适量。
