--- a/ok/wk/wk05-0.2.0.0.0.md
+++ b/ok/wk/wk05-0.2.0.0.0.md
@@ -72,15 +72,7 @@
 
 附：刀晕防治
 
-1.刀晕的预防：刀晕是在进行手术时突然发生的严重的全身
-
-性证候群。轻者每有头晕欲吐，或自觉心慌意乱，心悸不宁，恶寒
-
-微汗等现象；重者可以突然面色苍白，神志昏糊，四肢厥冷，大
-
-汗淋漓，以及呼吸微弱，脉搏沉细，血压下降等。故首先应做好
-
-预防工作：
+1.刀晕的预防：刀晕是在进行手术时突然发生的严重的全身性证候群。轻者每有头晕欲吐，或自觉心慌意乱，心悸不宁，恶寒微汗等现象；重者可以突然面色苍白，神志昏糊，四肢厥冷，大汗淋漓，以及呼吸微弱，脉搏沉细，血压下降等。故首先应做好预防工作：
 
 ①在手术前，先做好解释工作，以减轻病人紧张和恐惧的情绪。
 
