--- a/ok/zjz/zjz01-1.5.0.0.0.md
+++ b/ok/zjz/zjz01-1.5.0.0.0.md
@@ -68,7 +68,7 @@
 
 胸背部及锁骨上窝、胸骨切途上缘的腧穴针刺过深，会刺伤肺脏，使空气进入胸膜腔，发生创伤性气胸。此时患者突然感到胸痛、胸闷、心慌、呼吸不畅；严重者则有呼吸， 困难、心跳加快、紫绀、出汗、虚脱、血压下降等体克现象。检査患者时，叩诊呈过度反响，肺泡呼吸音明显降低或消失；严重 者可发现气管向健侧移位，X线胸透检查。可进一步诊断，并观察气体多少和肺组织的受压情况。有的病例，针刺当时并无明显 异常现象，隔几小时后，才逐渐出现胸痛、呼吸困难等症状，应注意观察。
 
-为防止气胸的发生，医者针刺时精力必须集中，选好适当体位，根据病人体形的胖瘦，掌握进针的深度，提插幅度不要过大， 胸背部的腧穴可采用斜刺、横刺，留针时间不宜过长—般少量的气体能自行吸收，如有咳嗽等症状，应予对症处理。但必须严密观察，如发现呼吸困难、紫绀、休克等现象。应立即抢救，如胸腔穿刺抽气减压、输氧、抗休克等。
+为防止气胸的发生，医者针刺时精力必须集中，选好适当体位，根据病人体形的胖瘦，掌握进针的深度，提插幅度不要过大， 胸背部的腧穴可采用斜刺、横刺，留针时间不宜过长一般少量的气体能自行吸收，如有咳嗽等症状，应予对症处理。但必须严密观察，如发现呼吸困难、紫绀、休克等现象。应立即抢救，如胸腔穿刺抽气减压、输氧、抗休克等。
 
 #### 2.刺伤心、肝、脾、肾等内脏：
 
