--- a/ok/zjz/zjz02-0.4.0.0.0.md
+++ b/ok/zjz/zjz02-0.4.0.0.0.md
@@ -10,7 +10,7 @@
 
 ### 三、施炎剂量的大小
 
-直接灸，是以小艾炷或中艾炷为主；间接灸，是以中艾炷或大艾炷为主。而且要依患者的体质、病情、部位来考虑灸量的大小。《医宗金鉴》说：“凡灸诸病，必火足气到，始能求愈。然头与四肢皮肉浅薄，若并灸之，恐肌骨气血难堪，必分日灸之，或隔日灸之，艾炷宜小，壮数宜少。有病必当灸[巨阙](https://www.gmzyjc.com/read/zjs/zjs3.2.1-0.1.1.3.13.md)、[鸠尾](https://www.gmzyjc.com/read/zjs/zjs3.2.1-0.1.1.3.14.md)者，必不可过三壮，艾炷如[小麦](https://www.gmzyjc.com/read/bc/bc18-0.0.4.0.0.md)，恐火气伤心也。背腰以下皮肉深厚，艾炷宜大，壮数宜多，使火气到，始能去痼冷之疾也。”《千金方》说： “头面目咽，灸之最欲生少；手臂四肢，灸之须小熟，亦不宜多； 胸背腹灸之尤宜大熟，其腰脊欲须少生。”《外台秘要》说：“凡灸有生熟，侯人盛衰及老小也。衰老者少灸，盛壮强实者多灸。”所谓“生”是指少灸；"熟”是指多灸。上述记载是说明施灸的标准。—般的说，凡是新病、体质强壮的艾炷宜大，壮数宜多；久病、体质虚弱者艾炷宜小，壮数宜少。从部位来说，胸部不宜用大艾炷；四肢末端，皮肉浅薄处不可多灸；腹背部及肌肉丰厚处则可多灸。妇女儿童，艾炷宜小，壮年则可大。古代文献中有灸百壮 者，都是指多次灸治的累积数。其它灸法的施灸量，可参考艾炷灸法。艾条法、温灸器灸一般以时间计算。[太乙](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.23.md)针、雷火针则以熨灸的次数计算。
+直接灸，是以小艾炷或中艾炷为主；间接灸，是以中艾炷或大艾炷为主。而且要依患者的体质、病情、部位来考虑灸量的大小。《医宗金鉴》说：“凡灸诸病，必火足气到，始能求愈。然头与四肢皮肉浅薄，若并灸之，恐肌骨气血难堪，必分日灸之，或隔日灸之，艾炷宜小，壮数宜少。有病必当灸[巨阙](https://www.gmzyjc.com/read/zjs/zjs3.2.1-0.1.1.3.13.md)、[鸠尾](https://www.gmzyjc.com/read/zjs/zjs3.2.1-0.1.1.3.14.md)者，必不可过三壮，艾炷如[小麦](https://www.gmzyjc.com/read/bc/bc18-0.0.4.0.0.md)，恐火气伤心也。背腰以下皮肉深厚，艾炷宜大，壮数宜多，使火气到，始能去痼冷之疾也。”《千金方》说： “头面目咽，灸之最欲生少；手臂四肢，灸之须小熟，亦不宜多； 胸背腹灸之尤宜大熟，其腰脊欲须少生。”《外台秘要》说：“凡灸有生熟，侯人盛衰及老小也。衰老者少灸，盛壮强实者多灸。”所谓“生”是指少灸；"熟”是指多灸。上述记载是说明施灸的标准。一般的说，凡是新病、体质强壮的艾炷宜大，壮数宜多；久病、体质虚弱者艾炷宜小，壮数宜少。从部位来说，胸部不宜用大艾炷；四肢末端，皮肉浅薄处不可多灸；腹背部及肌肉丰厚处则可多灸。妇女儿童，艾炷宜小，壮年则可大。古代文献中有灸百壮 者，都是指多次灸治的累积数。其它灸法的施灸量，可参考艾炷灸法。艾条法、温灸器灸一般以时间计算。[太乙](https://www.gmzyjc.com/read/zjs/zjs3.1.1-3-0.1.3.3.23.md)针、雷火针则以熨灸的次数计算。
 
 ### 四、灸疮的处理
 
