--- a/ok/zjz/zjz03-0.5.0.0.0.md
+++ b/ok/zjz/zjz03-0.5.0.0.0.md
@@ -14,7 +14,7 @@
 
 ### 二、操作方法
 
-毫针刺入腧穴得气并施行补泻手法，把电针器上的输出电位 器调至“0”值，将一对输出导钱分别接在两根针的针柄上，然后打开电源开关，选择需要的波型和频率，逐渐调高输出电流至所需的电流量，使患者出现能耐受的痠麻感。电针治疗中，人体经过多次刺激后，会产生适应性，剌激感由强变弱。此时，应加大刺激量或改变频率，以保持恒定作用。每次通电时间，—般为 10〜20分钟。治疗完毕，把电位调到“0”值，关闭电源，然后撤去导线，退出毫针。
+毫针刺入腧穴得气并施行补泻手法，把电针器上的输出电位 器调至“0”值，将一对输出导钱分别接在两根针的针柄上，然后打开电源开关，选择需要的波型和频率，逐渐调高输出电流至所需的电流量，使患者出现能耐受的痠麻感。电针治疗中，人体经过多次刺激后，会产生适应性，剌激感由强变弱。此时，应加大刺激量或改变频率，以保持恒定作用。每次通电时间，一般为 10〜20分钟。治疗完毕，把电位调到“0”值，关闭电源，然后撤去导线，退出毫针。
 
 ### 三、脉冲电流的作用和电针的适应证
 
