--- a/ok/wk/wk05-0.2.0.0.0.md
+++ b/ok/wk/wk05-0.2.0.0.0.md
@@ -90,7 +90,7 @@
 
 ②刀晕轻症者，只要扶持病人，安静平卧，或头位稍低，给服开水，稍待片刻即可恢复。
 
-③刀晕重症者，必须止痛保暧，同时灸百会、人中，或刺合谷、人中、少商等穴急救。如牙关紧闭，即用开关散吹鼻，得喷嚏后，气通窍开，可转危为安。若素体血虚，加以手术时出血过多的刀晕，则应内服补益气血的药物，或综合治疗。
+③刀晕重症者，必须止痛保暖，同时灸百会、人中，或刺合谷、人中、少商等穴急救。如牙关紧闭，即用开关散吹鼻，得喷嚏后，气通窍开，可转危为安。若素体血虚，加以手术时出血过多的刀晕，则应内服补益气血的药物，或综合治疗。
 
 （二）烙法
 
