--- a/ok/wk/wk11-0.4.0.0.0.md
+++ b/ok/wk/wk11-0.4.0.0.0.md
@@ -50,7 +50,7 @@
 
 若黄疸湿热并重者，加茵陈、车前子、龙胆草，重用郁金；热甚者，加生石膏，大青叶；神昏谵语者，加紫雪丹。
 
-3.蛔隐：虫厥过后，临床症状基本消失，或仅有脘胁部胀闷不适，低热，恶心，纳呆等症，苔薄白，脉沉弦，或有肠蛔虫的—般症状存在。胆道造影胆道内仍可见蛔虫。本证或无症状表现，或只有轻度肝胃不和之象，但胆道蛔虫仍在，故为隐性胆道蛔虫症。
+3.蛔隐：虫厥过后，临床症状基本消失，或仅有脘胁部胀闷不适，低热，恶心，纳呆等症，苔薄白，脉沉弦，或有肠蛔虫的一般症状存在。胆道造影胆道内仍可见蛔虫。本证或无症状表现，或只有轻度肝胃不和之象，但胆道蛔虫仍在，故为隐性胆道蛔虫症。
 
 治法：利胆排虫。
 
