--- a/ok/zjz/zjz01-1.3.0.0.0.md
+++ b/ok/zjz/zjz01-1.3.0.0.0.md
@@ -19,7 +19,7 @@
 
 2.在可能条件下，一种体位能暴露出针灸处方所列的腧穴。
 
-3.—般可采取卧位，尤其是精神不好，或精神过度紧张，体 质虚弱的患者最好采取卧位，防止晕针或其他事故。
+3.一般可采取卧位，尤其是精神不好，或精神过度紧张，体 质虚弱的患者最好采取卧位，防止晕针或其他事故。
 
 4.在比较冷的条件下，应采取少暴露皮肤面上的穴位，以防 受凉或感冒。
 
