--- a/ok/zjz/zjz03-0.6.0.0.0.md
+++ b/ok/zjz/zjz03-0.6.0.0.0.md
@@ -38,7 +38,7 @@
 
 1.水针注射时应注意药物的性能、药理作用、剂量、禁忌、 副作用和过敏反应。凡是能引起过敏反应的药物（青霉素等），必须先作皮试。副作用强的药物应慎用。
 
-2.—般药液不宜注射到关节腔，脊髓腔和血管内。这些药液误入关节腔可引起关节红肿、发热、疼痛等反应；误入脊髓腔，有掼害脊髓的可能。
+2.一般药液不宜注射到关节腔，脊髓腔和血管内。这些药液误入关节腔可引起关节红肿、发热、疼痛等反应；误入脊髓腔，有掼害脊髓的可能。
 
 3.在主要神经干通过的穴位作水针注射时，应避开神经干， 或浅刺以不达到神经干所在的深度为宜。若针尖触及神经干，患者有触电感，要稍退针、然后注入药液，以免损伤神经组织。
 
