--- a/ok/zjz/zjz01-1.4.2.0.0.md
+++ b/ok/zjz/zjz01-1.4.2.0.0.md
@@ -12,7 +12,7 @@
 
 3.平刺：又称“横刺、沿皮刺"即针身与皮肤表面呈15°角沿皮刺入。此法适用于肌肉特别浅薄处，如头、胸部位的腧穴， 有时在透穴刺法时也用这类针刺角度。
 
-(二）针刺深度   针刺深度是指针身刺入皮肉内的深度而言。 —般以既有针感又不伤及重要脏器为原则。《素问•刺要论》指出： “病有沉浮，刺有深浅，各至其理，无过其道”。每个腧穴的针刺深度，在腧穴各论中巳有详述，在此仅根据下列情况，作原则的 介绍。
+(二）针刺深度   针刺深度是指针身刺入皮肉内的深度而言。 一般以既有针感又不伤及重要脏器为原则。《素问•刺要论》指出： “病有沉浮，刺有深浅，各至其理，无过其道”。每个腧穴的针刺深度，在腧穴各论中巳有详述，在此仅根据下列情况，作原则的 介绍。
 
 1.年龄：年老体弱及小儿娇嫩之体，宜浅刺；中青年身体强壮，气血旺盛者，宜深刺。如《灵枢•逆顺肥瘦》：“婴儿，瘦人，浅而疾之，壮士肥人，深而留之”。
 
