--- a/ok/gk/gk04-0.2.3.0.0.md
+++ b/ok/gk/gk04-0.2.3.0.0.md
@@ -54,7 +54,7 @@
 
 <img src="img\4-15.jpg" style="zoom:80%;" />
 
-16.摩法 用手指或手掌于病人旳体表，轻揉地来回作抚摩动作。摩法的种类繁多，—般分为指摩法和掌摩法，但根据按摩的路线也可分为：直摩法、横摩法、揉摩法、斜摩法和束带摩法。因此，在施行手法时，医者肩部要放松，肘关节微屈，腕部维持在伸直位，摩动肘发力在肩，由肩至肘至手，手贴于皮肤，动作灵活，轻缓柔和（图4—16）。
+16.摩法 用手指或手掌于病人旳体表，轻揉地来回作抚摩动作。摩法的种类繁多，一般分为指摩法和掌摩法，但根据按摩的路线也可分为：直摩法、横摩法、揉摩法、斜摩法和束带摩法。因此，在施行手法时，医者肩部要放松，肘关节微屈，腕部维持在伸直位，摩动肘发力在肩，由肩至肘至手，手贴于皮肤，动作灵活，轻缓柔和（图4—16）。
 
 <img src="img\4-16.jpg" style="zoom:80%;" />
 
