--- a/ok/bc/bc03-0.1.4.0.0.md
+++ b/ok/bc/bc03-0.1.4.0.0.md
@@ -12,6 +12,6 @@
 
 民间以芦根解鱼蟹毒，如中河豚鱼毒者，以鲜品500克捣汁服 或水煎频服。
 
-总之，芦根质轻，药力薄弱，多作辅助药用， —般不用为主药。
+总之，芦根质轻，药力薄弱，多作辅助药用， 一般不用为主药。
 
 【用量用法】15—30克，煎服。鲜品可加倍使用，或捣汁服。   
