--- a/ok/zjz/zjz03-0.3.0.0.0.md
+++ b/ok/zjz/zjz03-0.3.0.0.0.md
@@ -6,7 +6,7 @@
 
 掌握皮内针的操作方法，适应范围和注意事项。
 
-皮内针是以特制的小型针具固定腧穴的皮下或皮内，进行时间较长埋藏，达到防治疾病—种方法。
+皮内针是以特制的小型针具固定腧穴的皮下或皮内，进行时间较长埋藏，达到防治疾病一种方法。
 
 ### 一、皮内针具
 
@@ -24,7 +24,7 @@
 
 2.麦粒型皮内针：可用于人体大部分腧穴。用左手拇、食二指按压腧穴的上下皮肤，固定穴位，右手用小镊子夹住针柄， 对准穴位沿皮刺入0.5〜1.0厘米左右，针柄留于皮肤外，用胶布将留于皮肤外的针身和针柄固定，再用较大的方形胶布把埋入皮肤内的针身和皮肤外部分覆盖上，以防止针具因活动而退出和汗水浸入针孔，发生感染。
 
-埋针时间的长短，要根据病情而定。—般以2〜3天为宜，秋冬季节可埋6〜7天，暑热天埋针不宜超过2天，以防止感染。埋针期间，每隔4小时左右，用手按压埋针处1〜2分钟，以加强剌激，增强疗效。
+埋针时间的长短，要根据病情而定。一般以2〜3天为宜，秋冬季节可埋6〜7天，暑热天埋针不宜超过2天，以防止感染。埋针期间，每隔4小时左右，用手按压埋针处1〜2分钟，以加强剌激，增强疗效。
 
 ### 三、适应范围
 
