--- a/ok/zjz/zjz01-1.2.0.0.0.md
+++ b/ok/zjz/zjz01-1.2.0.0.0.md
@@ -14,7 +14,7 @@
 
 在进行练针时，要做到捻转的角度大小，捻转的速度，可以随意掌握，来去的角度力求一致，快慢均匀。在
 这一过程中也可配合上下提插的练习，一般总的要求景提插幅度，上下一致，捻转角度来去一致，频率的快慢
-—致，达到得心应手，运用自如。但纸垫或棉花团与人体有一定的差异，为了体验不同的针刺手法所产生的不同作用，最好在自己身上进行练针，以便临床针刺施术时，心中有数，提 高针刺手法水平。
+一致，达到得心应手，运用自如。但纸垫或棉花团与人体有一定的差异，为了体验不同的针刺手法所产生的不同作用，最好在自己身上进行练针，以便临床针刺施术时，心中有数，提 高针刺手法水平。
 
 ### 〔临床应用〕
 
