update ok/bc/bc05-0.0.24.0.0.md. 复习思考题第4题，“茯苓与薏苡仁”之前删除空格，并加换行。与扫描版本保持一致。

--- a/ok/bc/bc05-0.0.24.0.0.md
+++ b/ok/bc/bc05-0.0.24.0.0.md
@@ -50,6 +50,7 @@
 
 3、以利尿通淋为主要功效的药物还有哪些？
 
-4、分析比较下列药组的功效和主治的相同点和不同点： 茯苓与薏苡仁，木通与通草，车前子与滑石，茵陈蒿与金钱草。
+4、分析比较下列药组的功效和主治的相同点和不同点：
+茯苓与薏苡仁，木通与通草，车前子与滑石，茵陈蒿与金钱草。
 
 5、利水渗湿药、祛风湿药、芳香化湿药以及清热燥湿药均有除湿作用，在临床应用上有何差别？为什么？ 
