--- a/ok/wk/wk06-1.5.0.0.0.md
+++ b/ok/wk/wk06-1.5.0.0.0.md
@@ -12,7 +12,7 @@
 
 〔辨证论治〕
 
-（—）辨证要领
+（一）辨证要领
 
 首先是辨部位，由于部位不同，病因各异，所以不同部位发的症状有共同点，也有不同点，应同中求异，抓住主症，进行治疗。如锁喉痈来势猛烈，可兼喉风，喘促痉厥；臀痈范围大，病灶深，行动困难。此外应与有头疽、丹毒鉴别：
 
