update ok/yk/yk1gl02-0.2.0.0.0.md. 蝉蛻--> 蝉蜕

--- a/ok/yk/yk1gl02-0.2.0.0.0.md
+++ b/ok/yk/yk1gl02-0.2.0.0.0.md
@@ -70,7 +70,7 @@
 
 （四）临证权变
 
-本病的各证型之间可相互转化或两型相兼，故施治时宜灵活变通。如风热壅盛型，若有目赤多眵，脉象洪数者，可酌加生石膏、银花、连翘、大黄；若为心火上炎较重者，可加栀子、莲子心、丹皮、茺蔚子清心凉血；若胬肉体厚色黄，舌红苔厚，又为脾胃湿热，可加滑石、土茯苓、车前子、地肤子等以利湿清热；若系阴虚火炎，反复发作，时轻时重者，可用前述知柏地黄丸灵活加减，也可在证属心阴不足、虚火上炎时改用天王补心丹治之。若胬肉已侵及黑睛，可加决明子、夏枯草、蝉蛻、秦皮等退翳消瘀之品；并积极配合外点药物或手术疗法。
+本病的各证型之间可相互转化或两型相兼，故施治时宜灵活变通。如风热壅盛型，若有目赤多眵，脉象洪数者，可酌加生石膏、银花、连翘、大黄；若为心火上炎较重者，可加栀子、莲子心、丹皮、茺蔚子清心凉血；若胬肉体厚色黄，舌红苔厚，又为脾胃湿热，可加滑石、土茯苓、车前子、地肤子等以利湿清热；若系阴虚火炎，反复发作，时轻时重者，可用前述知柏地黄丸灵活加减，也可在证属心阴不足、虚火上炎时改用天王补心丹治之。若胬肉已侵及黑睛，可加决明子、夏枯草、蝉蜕、秦皮等退翳消瘀之品；并积极配合外点药物或手术疗法。
 
 〔调护〕
 
