update ok/yk/yk1gl04-0.2.0.0.0.md. 蝉蛻 --> 蝉蜕

--- a/ok/yk/yk1gl04-0.2.0.0.0.md
+++ b/ok/yk/yk1gl04-0.2.0.0.0.md
@@ -84,7 +84,7 @@
 
 （四）临证权变
 
-本病因风邪外袭者，除视风热，风寒施治外，可酌加木贼、蝉蜕、密蒙花等以增强退翳之功。对火毒炽盛者，可选加板蓝根、大青叶、紫草等以增强解毒之作用。若大便秘结者，加用大黄、芒硝之类。若痰热上扰者，可酌加贝母、竹茹、前胡等。若患者久病气阴不足者，可加党参、麦冬益气生津。虚火甚者，可加知母、黄柏滋阴降火。此外，均可选用菊花、蝉蛻等以增加退翳明目之效。
+本病因风邪外袭者，除视风热，风寒施治外，可酌加木贼、蝉蜕、密蒙花等以增强退翳之功。对火毒炽盛者，可选加板蓝根、大青叶、紫草等以增强解毒之作用。若大便秘结者，加用大黄、芒硝之类。若痰热上扰者，可酌加贝母、竹茹、前胡等。若患者久病气阴不足者，可加党参、麦冬益气生津。虚火甚者，可加知母、黄柏滋阴降火。此外，均可选用菊花、蝉蜕等以增加退翳明目之效。
 
 〔调护〕
 
