update ok/wk/wk15-0.1.0.0.0.md. 1.原文有“本病又称 “水烧伤”，应为“本病又称 “火烧伤”，电子版已改。 2.原文有“其五指并拢时手掌的面积占全身体表面积前1%”，应为“其五指并拢时手掌的面积占全身体表面积的1%” 3.原文有“共为极细末）于撒”，应为“共为极细末）干撒”，电子版已改。

--- a/ok/wk/wk15-0.1.0.0.0.md
+++ b/ok/wk/wk15-0.1.0.0.0.md
@@ -1,6 +1,6 @@
 ## 第一节 水火烫伤
 
-水火烫伤是遭受沸水或烈火时对人体局部及全身引起损伤的疾病，中医文献记载首见于唐代《千金翼方》。本病又称 “水烧伤”、“汤火伤”、 “火疱”，“汤泼火伤”等。历代中医对烧伤病积累了丰富的治疗经验，有些至今在临床中应用。
+水火烫伤是遭受沸水或烈火时对人体局部及全身引起损伤的疾病，中医文献记载首见于唐代《千金翼方》。本病又称 “火烧伤”、“汤火伤”、 “火疱”，“汤泼火伤”等。历代中医对烧伤病积累了丰富的治疗经验，有些至今在临床中应用。
 
 〔病因病机〕
 
@@ -10,7 +10,7 @@
 
  （一）辨证要领
 
-烫伤后首先要估计损伤的面积和深度，烫伤的面积愈大，深度愈深，其病愈重，因此正确的估计烫伤面积和深度对病人的处理和预后有重要意义。烫伤面积计算法：常用手掌法，即不论年龄大小，其五指并拢时手掌的面积占全身体表面积前1%，可以用患者手掌面积与伤面 做一衡量，就能计算出烫伤面积的大小。烫伤的深浅程度一般分为三度，烫伤皮肤发红微肿为一度烫伤；烫伤皮肤发生水疱为二度烫伤；烫伤皮肤呈灰白或焦黑，甚至累及肌肉或骨骼为三度烫伤并结合全身症状划分轻度烫伤与重度烫伤；轻度：总面积在10%以下，儿童5%以下的二度烫伤，局部皮肤潮红疼痛或有水疱，表皮脱落露出鲜红创面可以逐渐干燥而愈，一般无全身症状。重度：总面积在10～30%、儿童在6〜15%之间的二度烫伤或三度烫伤在10%以上，或头面、颈、手、会阴等处水火烫伤或电灼伤、化学烧伤局部红肿疼痛，甚则肉色灰白或暗红，易于染毒，严重的水火烫伤皮塌肉烂，疼痛剧烈，难以安睡，愈后形成疤痕。又因热毒炽盛内入营血，以致脏腑不和，阴阳失调而出现全身症状
+烫伤后首先要估计损伤的面积和深度，烫伤的面积愈大，深度愈深，其病愈重，因此正确的估计烫伤面积和深度对病人的处理和预后有重要意义。烫伤面积计算法：常用手掌法，即不论年龄大小，其五指并拢时手掌的面积占全身体表面积的1%，可以用患者手掌面积与伤面做一衡量，就能计算出烫伤面积的大小。烫伤的深浅程度一般分为三度，烫伤皮肤发红微肿为一度烫伤；烫伤皮肤发生水疱为二度烫伤；烫伤皮肤呈灰白或焦黑，甚至累及肌肉或骨骼为三度烫伤，并结合全身症状划分轻度烫伤与重度烫伤；轻度：总面积在10%以下，儿童5%以下的二度烫伤，局部皮肤潮红疼痛或有水疱，表皮脱落露出鲜红创面可以逐渐干燥而愈，一般无全身症状。重度：总面积在10～30%、儿童在6〜15%之间的二度烫伤或三度烫伤在10%以上，或头面、颈、手、会阴等处水火烫伤或电灼伤、化学烧伤局部红肿疼痛，甚则肉色灰白或暗红，易于染毒，严重的水火烫伤皮塌肉烂，疼痛剧烈，难以安睡，愈后形成疤痕。又因热毒炽盛内入营血，以致脏腑不和，阴阳失调而出现全身症状
 
 （二）论治要点
 
