--- a/ok/gmrw/何世英.md
+++ b/ok/gmrw/何世英.md
@@ -2,7 +2,7 @@
 
 1912年6月6日，何世英生于天津。他祖籍江苏，世代多位读书人和名医，后因战乱，太爷一脉举家迁徙，辗转来到天津，因家境突变而一贫如洗。爷爷被迫成侵华俄军劳工，父亲做搭棚工人维持生计。
 
-因家境贫寒，少时只读几年私塾后即辍学在家，但自幼好学，或到学堂外偷听，或到旧书摊看书，回来在心中背诵诗书、在地上临摹习字，既练得记忆力超常又练得一手好字。尤以医学经典为偏爱，《频湖脉学》、《药性赋》、[《本草备药》](http://www.gmzywx.com/NewsDetail/1130054.html)、《汤头歌诀》等可以倒背如流。
+因家境贫寒，少时只读几年私塾后即辍学在家，但自幼好学，或到学堂外偷听，或到旧书摊看书，回来在心中背诵诗书、在地上临摹习字，既练得记忆力超常又练得一手好字。尤以医学经典为偏爱，《濒湖脉学》、《药性赋》、[《本草备药》](http://www.gmzywx.com/NewsDetail/1130054.html)、《汤头歌诀》等可以倒背如流。
 
 　　![img](img/20190615135913aa0fbe.png)
 
