--- a/ok/qs/qs01_01.md
+++ b/ok/qs/qs01_01.md
@@ -171,13 +171,13 @@
 
 黄者脾之色，故病则而色黄。忧思，属脾的情志，故病则常常有忧思的神情表现。脾之部位在中，故病则当脐有动气。脾主味，故病则食纳少而不化。脾主四肢，故病则倦怠无力。脾主腹，故病则腹满痛，肠呜而下利，此皆脾虚之病。脾主肌肉，故实则病身重，腹胀满，大便闭。
 
-**19.肺白善悲，脐右动气。洒浙寒热，咳唾喷嚏。**
+**19.肺白善悲，脐右动气。洒淅寒热，咳唾喷嚏。**
 
 **喘呼气促，肤痛胸痹。虚则气短，不能续息。**
 
-洒浙  sǎ xi，读撒（上声）西，恶风寒的样子。
+洒淅  sǎ xi，读撒（上声）西，恶风寒的样子。
 
-白者肺之色，故病则面色灰白。悲属肺的情志，故病则常常有悲、愁的神态出现。肺之部位在右（居心之上），故病则右（胸）胁有功气。肺主皮毛，故病则洒浙恶寒发热肤痛。咳嗽唾痰，喷嚏流涕，喘呼气促。胸者肺居其中，覆盖于心上，故病则胸痹而痛，肺虚则胸中气少，故喘咳气短不能续息。
+白者肺之色，故病则面色灰白。悲属肺的情志，故病则常常有悲、愁的神态出现。肺之部位在右（居心之上），故病则右（胸）胁有功气。肺主皮毛，故病则洒淅恶寒发热肤痛。咳嗽唾痰，喷嚏流涕，喘呼气促。胸者肺居其中，覆盖于心上，故病则胸痹而痛，肺虚则胸中气少，故喘咳气短不能续息。
 
 **20.肾黑善恐，脐下动气。腹胀肿喘，溲便不利。**
 
