--- a/ok/gmzy/gmzy012-1.md
+++ b/ok/gmzy/gmzy012-1.md
@@ -26,7 +26,7 @@
 
 1、明理:
 
-中医的主要特点是整体观和辩证论治。而真正明白整体观和辩证论治的道理，需要系统学完教材主要课程。课程的每一章都按照重要度指出了需要掌握、熟悉或者了解的内容。每章后面都有作业题供参考。只要认真学完这些课程，必然能够明白中医的道理。
+中医的主要特点是整体观和辨证论治。而真正明白整体观和辨证论治的道理，需要系统学完教材主要课程。课程的每一章都按照重要度指出了需要掌握、熟悉或者了解的内容。每章后面都有作业题供参考。只要认真学完这些课程，必然能够明白中医的道理。
 
 2、背诵：
 
