--- a/ok/rm/rm06.md
+++ b/ok/rm/rm06.md
@@ -128,7 +128,7 @@ end
 
 人体部位的划分非常重要，各个部位都可以视为一个单元，都可以有各自的寒热虚实病变，进而影响到相关功能。按照哪种方法划分要视情况而定，通常来说，三阴三阳六经辨证是一种主要的部位划分方法，但也视情况会使用到其它部位划分方法，比如三焦划分、脏腑形体划分等等。
 
-《概论》辩证章节要学习的各种辩证方法，比如八纲辩证、六经辩证、脏腑辩证、气血津液辩证等等，就是从不同角度进行部位划分后产生的，各有特点，适用于不同的情况。
+《概论》辨证章节要学习的各种辨证方法，比如八纲辨证、六经辨证、脏腑辨证、气血津液辨证等等，就是从不同角度进行部位划分后产生的，各有特点，适用于不同的情况。
 
 ## 2、病证的轻重传变
 
