--- a/ok/rm/rm01.md
+++ b/ok/rm/rm01.md
@@ -130,7 +130,7 @@
 >
 > 《难经-十二难》
 
-很多不愿意系统学习的中医爱好者，不识药性，不懂辩证，在不能全面把握人体虚实状态的情况下，往往只看见到一方面之虚，看不到其它方面的实，进而片面用药，犯虚虚实实之戒，造成严重后果的例子非常常见。
+很多不愿意系统学习的中医爱好者，不识药性，不懂辨证，在不能全面把握人体虚实状态的情况下，往往只看见到一方面之虚，看不到其它方面的实，进而片面用药，犯虚虚实实之戒，造成严重后果的例子非常常见。
 
 我们的老校长、中医司令吕炳奎前辈曾说过，反对社会上宣称可以短期速成的中医培训班。这种培训班制造了大量似懂非懂的半成品中医。这种中医治病效果先不论，因其知识不全面，常犯虚虚实实之戒，给病人造成更大的伤害，败坏了中医的声誉。大家要引以为戒！
 
