--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -2,7 +2,7 @@
 
 ## 1、基本原理
 
-前面介绍了人体的要素包括精、元气、神、气、血、津液、形等，这类要素的失衡就称之为证。判断要素失衡状态的过程称为辩证。下面介绍中医辩证的原理。
+前面介绍了人体的要素包括精、元气、神、气、血、津液、形等，这类要素的失衡就称之为证。判断要素失衡状态的过程称为辨证。下面介绍中医辨证的原理。
 
 1）有形与无形的关系
 
