--- a/ok/yk/yk0zl04-0.3.0.0.0.md
+++ b/ok/yk/yk0zl04-0.3.0.0.0.md
@@ -2,7 +2,7 @@
 
 五轮八廓内应五脏六腑，是经过长期的临床实践而总结出来的。古人的经验认为轮廓属标，脏腑属本。轮之有病，多由脏腑功能失调所致。临证时运用五轮八廓学说，通过观察眼部各轮廓症状表现，辨别相应脏腑的病变。这种从眼的局部进行脏腑辨证的方法，即中医眼科独特的五轮八廓辨证法。
 
-五轮八廓学说，从理论上阐明了眼部病变与脏腑的关系，为眼科辨证指明了方向，但在临证时还必须与八纲、病因、六经等辨证方法结合起来运用。例如，睑弦红赤湿烂者，病位在肉轮、地廓，内应脏腑为脾胃，而红赤湿烂系湿热为患，因此证属脾胃湿热。若病变出现于多个轮、廓时，应考虑为多个脏腑失调的表现，如白睛红赤，胞睑肿硬，又兼口渴、大便燥结、脉实数、舌苔黄糙等，因白睛在五轮属肺，在八廓属大肠，而胞睑在轮属脾，在廓属胃。红赤、肿硬、又兼口渴、便结、脉数实等系火盛里热，故当定为肺脾二经火盛，又挟胃肠积热所致。若数个轮廓先后发病，则应根据脏腑之间生克制化关系来认识病变的发主和发展。如先见白睛红赤，继而黑睛生翳，病位应先由肺火炽盛，后犯肝经为患，即可诊为肺金乘木之证。
+五轮八廓学说，从理论上阐明了眼部病变与脏腑的关系，为眼科辨证指明了方向，但在临证时还必须与八纲、病因、六经等辨证方法结合起来运用。例如，睑弦红赤湿烂者，病位在肉轮、地廓，内应脏腑为脾胃，而红赤湿烂系湿热为患，因此证属脾胃湿热。若病变出现于多个轮、廓时，应考虑为多个脏腑失调的表现，如白睛红赤，胞睑肿硬，又兼口渴、大便燥结、脉实数、舌苔黄糙等，因白睛在五轮属肺，在八廓属大肠，而胞睑在轮属脾，在廓属胃。红赤、肿硬、又兼口渴、便结、脉数实等系火盛里热，故当定为肺脾二经火盛，又挟胃肠积热所致。若数个轮廓先后发病，则应根据脏腑之间生克制化关系来认识病变的发生和发展。如先见白睛红赤，继而黑睛生翳，病位应先由肺火炽盛，后犯肝经为患，即可诊为肺金乘木之证。
 
 综上所述，五轮八廓学说对眼科临床辨证，确实具有一定指导意义。从古至今的眼科医家，对五轮八廓特别是五轮学说，运用比较普遍。古人认为轮脏标本相应，不知轮脏，即为标本不明。然而，五轮八廓辨证法还存在一定的局限性。如白睛发黄，病位虽在气轮、天廓，却非为肺与大肠之病，乃由脾胃湿热，交蒸肝胆，胆汁外溢所成。再如瞳神为水轮、水廓，但病变不仅与肾或膀胱有关，也常因其他脏腑功能失调所致。因此，临证时既要详查五轮八廓，又不可拘泥于五轮八廓，要以整体为主，四诊合参，将局部辨证与整体辨证结合起来，才能得出正确诊断，继而达到准确的施治。
 
