update ok/qs/qs04.md. 完善三处注意，修改一处错误文字。

--- a/ok/qs/qs04.md
+++ b/ok/qs/qs04.md
@@ -26,9 +26,9 @@
 
 **气虚亦痛溺色变，少气不足以报息。**
 
-**臑**nao，读闹，指上臂，屈肘称臑内。 **廉**lian，读连，指侧边而言。 **瞀**mao，读帽。心胸闷乱，视力模糊。
+**臑**nào，读闹，指上臂，屈肘称臑内。 **廉**lián，读连，指侧边而言。 **瞀**mào，读帽。心胸闷乱，视力模糊。
 
-**唱**he，读合，气扭急有声。
+**喝**hé，读合，气扭急有声。
 
 手太阴肺经：起始于中焦胃部，向下络于大肠，回过来沿着胃上口，穿过膈肌，属于肺脏。从肺系——气管喉咙部横出腋下，下循上臂内侧，走手少阴、手厥阴经之前，下向肘中，沿前臂内侧桡骨边缘，进入寸口——桡骨动脉处，上向大鱼际部，沿边际出大指的末端。
 
