--- a/ok/wk/wk14-0.1.0.0.0.md
+++ b/ok/wk/wk14-0.1.0.0.0.md
@@ -22,7 +22,7 @@
 
 4.心火妄动：心为君主之官，心火妄动，相火随之，扰动精室，则可见遗精、精浊、血精等病。
 
-5.肾气虚弱：或因先天不足，或因房劳伤肾，或因后天失养都能导致肾气亏耗。肾阴不足，水液不利，肾阳不足，气不运水，可发生癃闭、水疝及阳痿、不育等证。阴虚火旺，灼津为痰，可见阴茎痰核或子痰；火扰精室，可见遗精、精浊与血精。
+5.肾气虚弱：或因先天不足，或因房劳伤肾，或因后天失养都能导致肾气亏耗。肾阴不足，水液不利；肾阳不足，气不运水，可发生癃闭、水疝及阳痿、不育等证。阴虚火旺，灼津为痰，可见阴茎痰核或子痰；火扰精室，可见遗精、精浊与血精。
 
 〔治法〕
 
