--- a/ok/wk/wk11-0.2.0.0.0.md
+++ b/ok/wk/wk11-0.2.0.0.0.md
@@ -10,11 +10,11 @@
 
 （一）辨证要领
 
-一是抓住主证，明确诊断。腹痛、高热寒战和黄疸是本病的三大主要症状。右上腹间歇性绞痛或闷痛，有时可向右肩背部放射，右上腹有局限性压痛；病变在胆囊时热轻而迟，多不恶寒，病变在胆管时，多迅速寒战，继之高热，或往来寒热；约三分之一病人出现黄疸，变在胆管时，黄疸出现较快而重。现在用B型超声波检查往往可以诊断。二是根据发热轻重、有无黄疸、疼痛变化及脉舌情况辨析为气郁化热、湿热蕴结，脓毒积聚三种证候。三是应与胃十二指肠急性穿孔、急性胰腺炎、胆道蛔虫病、肠痈等相鉴别：
+一是抓住主证，明确诊断。腹痛、高热寒战和黄疸是本病的三大主要症状。右上腹间歇性绞痛或闷痛，有时可向右肩背部放射，右上腹有局限性压痛；病变在胆囊时热轻而迟，多不恶寒，病变在胆管时，多迅速寒战，继之高热，或往来寒热；约三分之一病人出现黄疸，病变在胆管时，黄疸出现较快而重。现在用B型超声波检查往往可以诊断。二是根据发热轻重、有无黄疸、疼痛变化及脉舌情况辨析为气郁化热、湿热蕴结，脓毒积聚三种证候。三是应与胃十二指肠急性穿孔、急性胰腺炎、胆道蛔虫病、肠痈等相鉴别：
 
 1.胃十二指肠溃疡病穿孔：本病早期很少有高热或畏寒，一般无黄疸，往往有突然发生的上腹部刀割样剧烈疼痛，常出现腹壁挛急如板状，X线检查多可见膈下游离气体，腹腔穿刺可抽得乳黄色混浊液体，镜检有脓细胞或食物残渣。
 
-2.急性胰腺炎：往往有上腹及左上腹持续性剧痛，有时放射到腰部，常有不同程度昏厥。血清淀粉酶、尿淀粉醃均升高。腹腔穿刺可抽出血性液体，及其淀粉酶增高等则有诊断价值。有时胆石病可引起胰腺炎，使两种疾病同时存在，须加以注意。
+2.急性胰腺炎：往往有上腹及左上腹持续性剧痛，有时放射到腰部，常有不同程度昏厥。血清淀粉酶、尿淀粉酶均升高。腹腔穿刺可抽出血性液体，及其淀粉酶增高等则有诊断价值。有时胆石病可引起胰腺炎，使两种疾病同时存在，须加以注意。
 
 3.胆道蛔虫病：剑突下呈“钻顶”样剧烈疼痛而腹部体征轻微是此病的特点，腹痛发作时辗转不安、大汗淋漓或四肢厥冷，缓解时如常人。发病初期，常有吐蛔史。
 
