--- a/ok/bc/bc16.md
+++ b/ok/bc/bc16.md
@@ -22,11 +22,11 @@
 
 7.联系麻黄、细辛、陈皮、 枳实、莱菔子等具有化痰止咳平喘作用的药物，了解本章以外的化痰止咳平喘药，扩大知识面。
 
-8.了解半夏、南星的炮炙， 旋复途、皂荚、竹沥的用法。
+8.了解半夏、南星的炮炙， 旋复花、皂荚、竹沥的用法。
 
 9.在自学本章全部内容的基 础上，重点掌握小结内容。
 
-凡能祛痰或消除痰涎，主要用于痰多咳嗽、咯痰不爽的药物，称为化痰药；能够减轻或制止咳嗽、平定气喘，主要用于咳喘病证的药物，称为止咳平喘药。咳嗽与痰在病机上密切枵关，临床上常同时兼见，一般咳喘每多挟痰，而痰多亦每致咳喘，所以在治疗时化痰药与止咳平喘药常相互配用，并且化痰药大都有止咳平喘之功，止咳平喘药多兼有化痰之能。为了便于临床应用起见， 本章将两类药合并介绍，总称为化痰止咳平喘药。
+凡能祛痰或消除痰涎，主要用于痰多咳嗽、咯痰不爽的药物，称为化痰药；能够减轻或制止咳嗽、平定气喘，主要用于咳喘病证的药物，称为止咳平喘药。咳嗽与痰在病机上密切相关，临床上常同时兼见，一般咳喘每多挟痰，而痰多亦每致咳喘，所以在治疗时化痰药与止咳平喘药常相互配用，并且化痰药大都有止咳平喘之功，止咳平喘药多兼有化痰之能。为了便于临床应用起见， 本章将两类药合并介绍，总称为化痰止咳平喘药。
 
 化痰药主要用于有形之痰多咳嗽、咯痰困难或痰饮气喘等 证。中医理论又认为：瘿瘤瘰疬、阴疽流注以及癫痫惊厥眩晕等证，是由无形之痰所引起，故亦常选用适当的化痰药来治疗。止咳平喘药主要用于内伤或外感所引起的咳嗽和喘息。
 
