--- a/ok/wk/wk14-0.2.0.0.0.md
+++ b/ok/wk/wk14-0.2.0.0.0.md
@@ -22,7 +22,7 @@
 
 （三）常见证治
 
-1急性期：起病急骤，一侧睾丸肿大疼痛，下坠。或有子系（精索）肿硬疼痛；或有阴囊红肿灼热。化脓时皮肤光亮而软，睾丸增大，压痛明显。脓熟则按之应指，有波动感，溃后出黄稠脓液，收口较快。初中期伴有全身症状，发冷发热，头痛，口渴，恶心；小便短赤或有刺痛，少腹抽痛。脉弦滑数，舌苔薄黄。证属湿热下注厥阴。
+1.急性期：起病急骤，一侧睾丸肿大疼痛，下坠。或有子系（精索）肿硬疼痛；或有阴囊红肿灼热。化脓时皮肤光亮而软，睾丸增大，压痛明显。脓熟则按之应指，有波动感，溃后出黄稠脓液，收口较快。初中期伴有全身症状，发冷发热，头痛，口渴，恶心，小便短赤或有刺痛，少腹抽痛。脉弦滑数，舌苔薄黄。证属湿热下注厥阴。
 
 治法：清热利湿，疏肝理气。
 
@@ -30,7 +30,9 @@
 
 若高热者，加银花、石膏；小腹抽痛明显者，加川楝子、炒小茴香。
 
-2.慢性期：急性症状消退以后，睾丸常留有较硬的肿块，疼痛轻微或不痛。此为肝郁气滞血瘀。治法：疏肝散结，活血消肿。
+2.慢性期：急性症状消退以后，睾丸常留有较硬的肿块，疼痛轻微或不痛。此为肝郁气滞血瘀。
+
+治法：疏肝散结，活血消肿。
 
 方药：膈下逐瘀汤加减。
 
@@ -58,7 +60,7 @@
 
 〔应用例案〕
 
-张XX,男，32岁。患者睾丸疼痛反复发作一年余。此次发作3天，阴囊灼热，睾丸疼痛，体温38.2℃,夜难入寐，性躁易怒，小溲黄赤，舌红苔黄、脉弦数，此系湿热下注，气血凝滞，脉络不和。治宜清利湿热，疏肝和络。拟用龙胆泻肝汤加减（龙胆草9克、山栀6克、黄芩9克、柴胡5克、生地12克、车前子9克、川楝子9克、蒲公英30克、凌霄花6克。每日1剂），服5剂，局部红肿基本消失，少腹下坠亦轻，发热已退。但小便仍黄，口苦，苔薄黄，脉弦。照原方续投2剂，服后痊愈。
+张XX,男，32岁。患者睾丸疼痛反复发作一年余。此次发作3天，阴囊灼热，睾丸疼痛，体温38.2℃,夜难入寐，性躁易怒，小溲黄赤，舌红、苔黄、脉弦数，此系湿热下注，气血凝滞，脉络不和。治宜清利湿热，疏肝和络。拟用龙胆泻肝汤加减（龙胆草9克、山栀6克、黄芩9克、柴胡5克、生地12克、车前子9克、川楝子9克、蒲公英30克、凌霄花6克。每日1剂），服5剂，局部红肿基本消失，少腹下坠亦轻，发热已退。但小便仍黄，口苦，苔薄黄，脉弦。照原方续投2剂，服后痊愈。
 
 按：本例子痈反复发作年余，诊断明确。发热，躁怒，疼痛不得眠，医者重用清泄湿火，疏泄厥阴之龙胆泄肝汤，药证既合，病情迅速缓解而愈。倘可继进丸药清解余邪，可望不再复发。（节选自《千家妙方》江苏邵荣世）
 
