--- a/ok/wk/wk05-0.2.0.0.0.md
+++ b/ok/wk/wk05-0.2.0.0.0.md
@@ -102,7 +102,7 @@
 
 用法：使用时将针头蘸麻油在炭火或酒精灯上烧红，从脓腔低处向上方斜入烙之，脓即随之流出（需要疮口开大，可在拔针时向上一拖，取斜出方向；需要疮口开小，可在拔出时直向取出）。一烙不透可以再烙，烙后可插入药线，使疮口不致一时粘合，便于脓液畅泄。
 
-注意事项：对红肿焮痛的阳毒小疮，用之反増肿痛，加深溃烂；筋骨关节之处，用之恐焦筋灼骨而致残废；胁肋腰腹等部位，不可深刺，否则将伤及内膜；头面为诸阳之会，而且皮肉较薄之处，应禁用。
+注意事项：对红肿焮痛的阳毒小疮，用之反增肿痛，加深溃烂；筋骨关节之处，用之恐焦筋灼骨而致残废；胁肋腰腹等部位，不可深刺，否则将伤及内膜；头面为诸阳之会，而且皮肉较薄之处，应禁用。
 
 2.烙铁烙法：烙铁系用铁或铜制成，其头如半粒小蚕豆大，上有一柄。它主要利用器械烧灼后，非但可以止血，而且又能烫治赘疣、瘜肉。
 
