--- a/ok/wk/wk05-0.2.0.0.0.md
+++ b/ok/wk/wk05-0.2.0.0.0.md
@@ -172,7 +172,7 @@
 
 用法：凡头大蒂小的赘疣、痔核等证，可在根部以双套结扣住扎紧；凡头小蒂大的痔核，可以缝针贯穿它的根部，再用“8”字式结法，二线交叉扎紧，或采用"回”字形结扎；如大络断裂，可先找到断裂的血管头，再用缝针引线贯穿出血底部，然后系紧打结。
 
-注意事项：内痔用缝针穿线时，不应穿过患处基底部以下，以免化脓；一般扎线应扎紧，否则木能达到完全脱落的目的；扎线末脱，应俟其自然脱落，不宜硬拉，以防出血。对血瘤和岩肿当禁忌使用。
+注意事项：内痔用缝针穿线时，不应穿过患处基底部以下，以免化脓；一般扎线应扎紧，否则不能达到完全脱落的目的；扎线末脱，应俟其自然脱落，不宜硬拉，以防出血。对血瘤和岩肿当禁忌使用。
 
 ​        (九）熨法
 
