--- a/ok/wk/wk11-0.3.0.0.0.md
+++ b/ok/wk/wk11-0.3.0.0.0.md
@@ -28,7 +28,7 @@
 
 恶心呕吐重者，加竹茹、木香、生姜；高热甚者，加石膏、金银花、蒲公英；肩背痛明显者，加川楝子、香附。
 
-2.肠胃实热，突然发作的腹部疼痛拒按，痛如刀割，胸闷不适，恶心呕吐，高热面赤（体温在39℃以上），口干渴饮，大便秘结，小便短赤，舌质红，苔黄腻或燥，脉洪数。证属实热内阻中焦，阳明腑实。
+2.肠胃实热：突然发作的腹部疼痛拒按，痛如刀割，胸闷不适，恶心呕吐，高热面赤（体温在39℃以上），口干渴饮，大便秘结，小便短赤，舌质红，苔黄腻或燥，脉洪数。证属实热内阻中焦，阳明腑实。
 
 治法：重用清热攻下为主。
 
